--- a/articles/rfi/999996.md
+++ b/articles/rfi/999996.md
@@ -1,5 +1,5 @@
 <!--1713303902000-->
-[“我们的海洋”大会开幕      希腊推出两个新海洋公园](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E6%88%91%E4%BB%AC%E7%9A%84%E6%B5%B7%E6%B4%8B-%E5%A4%A7%E4%BC%9A%E5%BC%80%E5%B9%95-%E5%B8%8C%E8%85%8A%E6%8E%A8%E5%87%BA%E4%B8%A4%E4%B8%AA%E6%96%B0%E6%B5%B7%E6%B4%8B%E5%85%AC%E5%9B%AD)
+[中国奇瑞将签署在巴塞罗那生产协议](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE)
 ------
 
-<div>16/04/2024 - 22:30</div><img src="https://s.rfi.fr/media/display/344e934a-fc30-11ee-8a40-005056bf30b7/w:1280/p:16x9/p2-let281-ocean.png"><p><strong></strong></p><div><p>包括来自约 120 个国家的代表团在内的会议第二天，希腊总理强调，他对“这次会议期间做出的承诺表示欢迎，其中有 400 多项承诺，价值超过 100 亿美元”。</p><p>这些承诺“表明我们有采取行动的政治意愿，只有与政府、企业、民间社会合作”才能“应对这一全球挑战”，“保护我们的海洋”。</p><p>在 2023 年 3 月于巴拿马举行的上一次峰会上，与会者承诺投资 190 亿美元（178 亿欧元），用于可持续捕捞、消除污染、海上安全和保护等项目。欧盟去年宣布将投入8亿多欧元用于海洋相关项目。</p><p>希腊总理表示，“早在我们了解气候变化之前，海洋就已经向我们发出了求救信号”。</p><p>作为今年会议的东道国，希腊决定重点讨论四个主题：沿海地区和岛屿的可持续旅游业、绿色海上运输、减少海洋塑料和微塑料以及地中海的绿色转型。</p><p>作为希腊海洋生物多样性保护结构化战略的一部分，希腊正在实施 21 项预算达 7.8 亿欧元，以用于海洋污染防治工作。</p><p>“我们的海洋”大会是由美国国务卿克里亲自发起召开的。第一、二次大会先后于2014年和2015年在美国华盛顿和智利瓦尔帕莱索召开，国家海洋局均派高级别代表团参会。“我们的海洋”第三次大会于9月15日至16日回师至华盛顿举行。</p><p>来自世界主要海洋和岛屿国家的政府、学界、国际机构和非政府组织共90余个代表团参会，其中有15个沿海国家的外长或海洋、渔业部长及11个国际和地区组织代表就海洋保护区、打击非法捕鱼和全球海洋领导力等议题发言。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWU7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E6%2588%2591%25E4%25BB%25AC%25E7%259A%2584%25E6%25B5%25B7%25E6%25B4%258B-%25E5%25A4%25A7%25E4%25BC%259A%25E5%25BC%2580%25E5%25B9%2595-%25E5%25B8%258C%25E8%2585%258A%25E6%258E%25A8%25E5%2587%25BA%25E4%25B8%25A4%25E4%25B8%25AA%25E6%2596%25B0%25E6%25B5%25B7%25E6%25B4%258B%25E5%2585%25AC%25E5%259B%25AD&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E2%80%9C%E6%88%91%E4%BB%AC%E7%9A%84%E6%B5%B7%E6%B4%8B%E2%80%9D%E5%A4%A7%E4%BC%9A%E5%BC%80%E5%B9%95%20%20%20%20%20%20%E5%B8%8C%E8%85%8A%E6%8E%A8%E5%87%BA%E4%B8%A4%E4%B8%AA%E6%96%B0%E6%B5%B7%E6%B4%8B%E5%85%AC%E5%9B%AD%20-%20https%3A%2F%2Frfi.my%2FAWU7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E2%80%9C%E6%88%91%E4%BB%AC%E7%9A%84%E6%B5%B7%E6%B4%8B%E2%80%9D%E5%A4%A7%E4%BC%9A%E5%BC%80%E5%B9%95%20%20%20%20%20%20%E5%B8%8C%E8%85%8A%E6%8E%A8%E5%87%BA%E4%B8%A4%E4%B8%AA%E6%96%B0%E6%B5%B7%E6%B4%8B%E5%85%AC%E5%9B%AD%20-%20https%3A%2F%2Frfi.my%2FAWU7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWU7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E2%80%9C%E6%88%91%E4%BB%AC%E7%9A%84%E6%B5%B7%E6%B4%8B%E2%80%9D%E5%A4%A7%E4%BC%9A%E5%BC%80%E5%B9%95%20%20%20%20%20%20%E5%B8%8C%E8%85%8A%E6%8E%A8%E5%87%BA%E4%B8%A4%E4%B8%AA%E6%96%B0%E6%B5%B7%E6%B4%8B%E5%85%AC%E5%9B%AD&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>16/04/2024 - 22:35</div><img src="https://s.rfi.fr/media/display/d798ca48-fc30-11ee-881c-005056bf30b7/w:1280/p:16x9/Logo-Chery.png"><p><strong></strong></p><div><p>西班牙工业部在一份声明中表示，“两家公司达成了一项“协议”，将在位于巴塞罗那前日产工厂生产汽车”。</p><p>现阶段尚未透露该协议的细节，该协议将于周三在马德里举行的会议上签署，会议期间工业部长乔迪·俄瑞武（Jordi Hereu）和奇瑞代表团将在加泰罗尼亚地区政府成员出席的情况下签署。</p><p>加泰罗尼亚议会议长托伦德(Roger Torrent)高兴地说，“经过几个月的谈判，我们最终实现了前日产工厂的再工业化”，“埃布罗和奇瑞之间达成了生产数千辆汽车的协议”。因此前有消息说，中国奇瑞有意在意大利设分厂。</p><p>至于选址，奇瑞很可能会重启原先日产在巴塞罗那的工厂，恢复当地约1600个工作岗位。该工厂曾因产量减少于2021年停产关闭。</p><p>拥有 3,000 名员工的前日产工厂于 2021 年 12 月关闭。这个庞大工业综合体的一部分被出售给摩托车制造商 Silence 和 EV Motors，但地方当局与 EV Motors 一直在寻找另一家投资者完全重新启动该网站。</p><p>奇瑞是继电动汽车冠军比亚迪之后第二家宣布在欧洲设立工厂的中国制造商，比亚迪于二月份正式在匈牙利建设其第一家欧洲工厂。 后者将在三年内投入运营。</p><p>奇瑞成立于1997年，是一家国有企业。 该品牌声称到 2023 年将售出 188 万辆乘用车，大约 15 年前在中国非常受欢迎，尤其是针对当地市场的省油型城市汽车。</p><p>法新社表示，中国奇瑞做出这样的决定是不容易的。2023年下半年以来，欧美接连宣布对中国电动汽车发起调查措施。当年9月，欧盟宣布对中国电动汽车启动反补贴调查。2024年3月6日，欧盟发布公报称，“已掌握足够证据，表明出口到欧盟的中国电动汽车正在接受补贴”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUA.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A5%2587%25E7%2591%259E%25E5%25B0%2586%25E7%25AD%25BE%25E7%25BD%25B2%25E5%259C%25A8%25E5%25B7%25B4%25E5%25A1%259E%25E7%25BD%2597%25E9%2582%25A3%25E7%2594%259F%25E4%25BA%25A7%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWUA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWUA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUA.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
