--- a/articles/rfi/999979.md
+++ b/articles/rfi/999979.md
@@ -1,5 +1,5 @@
-<!--1713356105000-->
-[中美防长刚通电话 中国军机台湾海峡跟踪美国海军巡逻机](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D-%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA)
+<!--1713363301000-->
+[中美防长难得对话 说了什么](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D-%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88)
 ------
 
-<div>17/04/2024 - 11:05</div><img src="https://s.rfi.fr/media/display/9dceba52-b9fe-11ea-a7ad-005056bf87d6/w:1280/p:16x9/roblin_poseidon.jpg"><p><strong>中国军方周三报告，派出战斗机对飞越敏感台湾海峡的美国海军巡逻机进行监视和警告。中国军方谴责美国此次在台湾海峡的飞行是“公开炒作”。美国军方称，“美国根据国际法在台湾海峡开展行动，维护了所有国家的航行权利和自由。”路透社说，此事件发生在中美国防部长互通电话几小时后。        </strong></p><div><p>中国派出战斗机在台湾海峡跟踪美国海军飞机。中国军方报告派出战斗机对飞越敏感台湾海峡的美国海军巡逻机进行监视和警告。</p><p>路透社的报道称，中国声称对民主治理的台湾拥有主权，并表示对该海峡拥有管辖权。台湾和美国对此存在争议，称台湾海峡是国际水道。</p><p>据美国海军第七舰队报告，P-8A海神海上巡逻侦察机也用于反潜任务，在国际空域飞越了台湾海峡。</p><p>美国在一份声明中表示：“美国根据国际法在台湾海峡开展行动，维护所有国家的航行权利和自由。” 并说，“这架飞机飞越台湾海峡表明了美国对自由开放的印太地区的承诺。”</p><p>中国军方称此次飞行是“公开炒作”，并公告说已派出战机对美机进行监视和警告，并且“依法依规予以处理”。</p><p>解放军东部战区在声明中表示，战区部队始终保持高度戒备，坚决捍卫国家主权安全和地区和平稳定。</p><p>根据台湾国防部消息，美军飞机经海峡向南飞行，台军已监测情况，但未发现任何异常。</p><p>上次美国海军宣布飞越台湾海峡是在去年12月，中国军方表示也派出了战斗机对飞机进行监视和警告。</p><p>最新的飞越任务是在美国国防部长奥斯汀与中国国防部长董军通话后不久进行的，两国防长通话是两国寻求恢复军事关系一年多来的首次接触。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYa.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E7%25BE%258E%25E9%2598%25B2%25E9%2595%25BF%25E5%2588%259A%25E9%2580%259A%25E7%2594%25B5%25E8%25AF%259D-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2586%259B%25E6%259C%25BA%25E5%258F%25B0%25E6%25B9%25BE%25E6%25B5%25B7%25E5%25B3%25A1%25E8%25B7%259F%25E8%25B8%25AA%25E7%25BE%258E%25E5%259B%25BD%25E6%25B5%25B7%25E5%2586%259B%25E5%25B7%25A1%25E9%2580%25BB%25E6%259C%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAWYa.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAWYa.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYa.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:43</div><img src="https://s.rfi.fr/media/display/acc7f874-a745-11ee-a27e-005056a97e36/w:1280/p:16x9/Dong%20Jun.JPG"><p><strong>美国和中国国防部长昨天稍晚实现一年半以来首次通话，这是两个超级大国在紧张对立局势依然严重的情况下仍希望保持对话的新迹象。但同时这次交流正值美国寻求加强与亚太地区其他国家的军事联盟以对抗中国日益增长的影响力之际。        </strong></p><div><p>据法新社今天报道称，华盛顿希望与北京保持开放的沟通渠道，以防止紧张局势升级。五角大楼报告，美国国防部长奥斯汀和中国国防部长董军通过视频会议通话。</p><p>据美国五角大楼发言人帕特·莱德在公告中说：两位官员讨论了美国和中华人民共和国之间的防务关系以及地区和全球安全问题。奥斯汀强调了两国之间继续开放军事通讯线的重要性，他并重申美国将继续在国际法允许的任何地方安全、负责任地飞行、航行和行动。”</p><p>根据中国国防部的一份新闻稿，中国国防部长董军呼吁中美两国之间应加强信任。</p><p>他强调，中美必须以和平为最宝贵、以稳定为最重要。 而军事部门对稳定双边关系发展和防止重大危机至关重要。</p><p>据法新社，董军重申中国对台湾的立场。 中国将台湾视为自己的省份之一，自 1949 年中国内战结束以来，中国尚未成功将台湾与其他领土统一。</p><p>中国官方透露的董军讲话称，“台湾问题事关中国的核心利益，中国的核心利益决不能受到损害。”</p><p>中国国防部长还呼吁美国尊重中国在南海的主权主张。</p><p>法新社称，北京声称对南海的大部分海域，岛屿和礁石拥有主权，而且最近与菲律宾的紧张局势加剧。</p><p>董军强调，“美国必须承认中国的坚定立场”并“采取具体措施维护地区和平”。</p><p>这次交流是在美国、菲律宾和日本领导人在华盛顿举行史无前例的峰会之后不到一周进行的，峰会期间美国菲律宾和日本特别谴责了北京在这一战略海域的“危险和侵略性”行为。</p><p>在明显针对北京的警告中，美国总统拜登承诺在发生被袭击时美国会保卫菲律宾。</p><p>拜登和习近平去年 11 月在加利福尼亚州会晤期间商定的两国军事安全对话最近恢复，并于 4 月初在夏威夷举行了美国和中国军事代表的工作会议。</p><p>但这位五角大楼负责人与中国国防部长的最后一次重要交流可以追溯到 2022 年 11 月，当时他在柬埔寨会见了时任国防部长魏凤和。</p><p>而时任众议院民主党领袖佩洛西 (Nancy Pelosi) 2022 年访问台湾后，北京决定中断与华盛顿的高层军事讨论。</p><p>2023 年初，中国和美国经历了一段高度紧张的时期，这与中国气球飞越美国领土有关。</p><p>尽管局势有所缓和，但无论是技术竞争还是台湾问题，紧张局势仍然很高。</p><p>在美国和中国领导人于11月就恢复军事讨论达成一致之前，美国国防部长曾警告称，如果两国军队之间缺乏沟通，可能会导致擦枪走火事故恶化。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWd8.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E7%25BE%258E%25E9%2598%25B2%25E9%2595%25BF%25E9%259A%25BE%25E5%25BE%2597%25E5%25AF%25B9%25E8%25AF%259D-%25E8%25AF%25B4%25E4%25BA%2586%25E4%25BB%2580%25E4%25B9%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88%20-%20https%3A%2F%2Frfi.my%2FAWd8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88%20-%20https%3A%2F%2Frfi.my%2FAWd8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWd8.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
