--- a/articles/rfi/999981.md
+++ b/articles/rfi/999981.md
@@ -1,5 +1,5 @@
-<!--1713356104000-->
-[中国田协出面说要调查半程马拉松作弊指控案](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88)
+<!--1713356105000-->
+[中国第一季度增幅高于预期，但经济疲软疑虑依存 - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240417-%E4%B8%AD%E5%9B%BD%E7%AC%AC%E4%B8%80%E5%AD%A3%E5%BA%A6%E5%A2%9E%E5%B9%85%E9%AB%98%E4%BA%8E%E9%A2%84%E6%9C%9F%EF%BC%8C%E4%BD%86%E7%BB%8F%E6%B5%8E%E7%96%B2%E8%BD%AF%E7%96%91%E8%99%91%E4%BE%9D%E6%97%A7)
 ------
 
-<div>17/04/2024 - 11:21</div><img src="https://s.rfi.fr/media/display/8014ac0e-dc57-11ee-b9f1-005056bf30b7/w:1280/p:16x9/AP23200244616280.jpg"><p><strong>刚刚过去的周日北京半程马拉松的视频显示，三名来自非洲国家的选手似乎放慢速度，以便中国选手何杰超过他们并获胜。中国田径协会誓言加强对路跑赛事的调查与监管。        </strong></p><div><p>中国选手何杰报告以 1 小时 03 分 44 秒的成绩获胜，他领先埃塞俄比亚选手德杰内·海鲁·比基拉 (Dejene Hailu Bikila) 和肯尼亚选手罗伯特·凯特 (Robert Keter) 和威利·姆南加特 (Willy Mnangat)，这3个人均获得并列第二名。</p><p>据网上分享的视频显示，三名领先的跑步者向还稍稍落后的何杰挥手，示意终点线。最终四个人一起跑完了整个比赛，总里程刚刚超过 13 英里。</p><p>肯尼亚选手姆南加特告诉英国广播公司，他们三人只是作为起跑者参加比赛，并不计成绩。然而，按照惯例，他们的参赛号码布并没有表明他们是起跑后跑跑而已。</p><p>北京市体育主管部门北京市体育局表示，正在对该事件进行调查，调查结果将在稍后公布。该机构还说，“总体来看，路跑赛事整体运行平稳，但赛事组织管理方面的问题也暴露出来，引起了广泛关注。”</p><p>据路透社说，长跑在中国越来越受欢迎，但比赛却有作弊和组织不善的历史。比如，2018年深圳半程马拉松赛中，有258名参赛者被证实作弊。 2010年，中国山东女子半程马拉松冠军因被发现由他人代跑而被剥夺了冠军头衔。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E5%259B%25BD%25E7%2594%25B0%25E5%258D%258F%25E5%2587%25BA%25E9%259D%25A2%25E8%25AF%25B4%25E8%25A6%2581%25E8%25B0%2583%25E6%259F%25A5%25E5%258D%258A%25E7%25A8%258B%25E9%25A9%25AC%25E6%258B%2589%25E6%259D%25BE%25E4%25BD%259C%25E5%25BC%258A%25E6%258C%2587%25E6%258E%25A7%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 13:35</div><img src="https://s.rfi.fr/media/display/de712a84-105a-11ea-a2a3-005056bff430/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>周三（4月17日）出版的法国各报头版新闻重点各有侧重，主要内容分别有：在即将迎来盟军诺曼底登陆80周年纪念前夕，法国总统前往德龙省瓦西昂韦科尔向遭到德军杀害的抵抗战士和平民致敬；巴黎奥运会倒计时100天，各方关注焦点不一；在异常紧张的局势背景下，以色列继续其在加沙的殖民政策；欧元区今年经济增长远低于中国和美国；关于中国的消息主要围绕德国总理访华以及中国第一季度经济增长展开。                    </strong></p><div><p><strong>朔尔茨希望与习近平讨论乌克兰人民的“公正和平</strong>”</p><p>德国总理朔尔茨周日（4月14日）抵达中国访问。这是在欧盟与中国在贸易领域展开较量的背景下展开的一次访问。欧盟目前正在对中国新能源车进行反补贴、不正当竞争展开调查，并指责中国用低成本产品充斥欧洲市场。《费加罗报》、《十字架报》和《回声报》分别报道了朔尔茨在中国访问的相关消息。</p><p>中国国家主席习近平周二与德国总理朔尔茨举行了会晤。朔尔茨希望能与习近平就如何在乌克兰实现“公正和平”达成一致。他还披露：两国领导人同意支持将在瑞士召开的乌克兰和平会议。</p><p><strong>中德两国不断变化的贸易关系</strong></p><p>《回声报》突出报道了德中两国的（贸易）关系。该报首先注意到：去年，中德两国贸易额大幅下降，仅略高于中美贸易额。这与德国经济衰退以及一些大型集团将更多研发和生产转移到中国有关。作为德国的最大贸易伙伴，与中国保持密切的贸易关系对德国至关重要。</p><p>由于在诸多领域面临来自中国本土企业的更激烈的竞争，德国企业被迫改变战略。一些大型企业正在加强在中国的研发和生产基地，同时寻求降低在德国的成本。随着本土化的日益增长，柏林一再发出呼吁，要求中国提供公平的竞争环境。与此同时，柏林在去年7月发布的“中国战略”中提到的“去风险”理念并未被提上该国各大公司的议程。</p><p><strong>朔尔茨捍卫自由贸易事业</strong></p><p>《回声报》的另外一篇报道，揭示了朔尔茨极力捍卫自由贸易理念。报道指出：对历任德国总理来说，与中国相处，就要极力维持一种难度很大的平衡，这便是：既要为德国争得极为有利可图的经济关系，又不要显露出对中共政权过于宽容。而对现任总理朔尔茨而言，这条路无疑比历届前任更艰难。在开启中国之行之时，朔尔茨便再次演练起具有德国总理特色的平衡游戏。但是这一次却游走于欧盟与中国之间。</p><p>关于欧盟呼吁保护自身免受中国工业产能过剩影响的问题，朔尔茨宣称：主张拥护“开放和公平的市场”。但前提是：竞争必须公平，不存在倾销、产能过剩和侵犯专利。德国总理还强调：应该为外国公司建立生产基地提供方便，不必为此设置数目繁多的官僚障碍。朔尔茨还对中国的“倾销”和“产能过剩”发出警告，同时呼吁欧盟不要搞保护主义。</p><p><strong>中国经济增长的反弹并不能消除对未来的疑虑</strong></p><p>《回声报》还刊出一篇报道，披露中国今年第一季度国内生产总值按年率计算增长5.3%，增幅高于预期。不过，该报指出：这一增长数字并不能消除对中国经济疲软的担忧。</p><p>推动经济活动的是工业部门：在政府对技术和能源转型的支持下，制造业生产大幅增长，工业投资年增长率近10%，基础设施投资也大幅增加。不过，报道引述专家观点指出：由公共投资驱动的增长似乎并不平衡。零售销售没有达标，表明消费者需求仍然疲软。私营企业投资的增长速度远低于公共投资，引发了对中国经济活动反弹能否持续的质疑。</p><p>另外，北京面临的另一个难题是房地产危机，这是过去三十年来最严重的一次。它削弱了储蓄投资于住房的家庭的信心。房地产投资依然举步维艰。</p><p>中国经济受到房地产行业持续放缓的影响。信贷繁荣和萧条从来都不会很快得到解决，这次也不例外。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%B5%81%E8%8A%B3/" title="流芳">流芳</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
