--- a/articles/rfi/999982.md
+++ b/articles/rfi/999982.md
@@ -1,5 +1,5 @@
-<!--1713356102000-->
-[视频 伊朗袭击以色列后 欧盟峰会讨论延长制裁伊朗](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E8%A7%86%E9%A2%91-%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E-%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97)
+<!--1713356104000-->
+[中国田协出面说要调查半程马拉松作弊指控案](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88)
 ------
 
-<div>17/04/2024 - 13:25</div><img src="https://s.rfi.fr/media/display/7080199c-e6e1-11ee-bb42-005056a97e36/w:1280/p:16x9/AP24080521474896.jpg"><p><strong>欧盟首脑在布鲁塞尔举行会议，中东局势的危险升级是本次欧洲首脑会议的重要议题。欧盟可能跟随美国宣布对伊朗延长制裁措施，详情请见France24台记者 艾利克斯-勒布尔东（Alix Le Bourdon） 报道。        </strong></p><div><p>欧盟首脑今明两天在布鲁塞尔举行27个成员国峰会，中东局势的危险升级是本次欧洲首脑会议的重要议题，根据最新草案，欧盟可能跟随美国宣布对伊朗延长制裁措施，</p><p>France24台记者 艾利克斯-勒布尔东（Alix Le Bourdon） 从布鲁塞尔发出的报道指出，自从伊朗袭击以色列以来，西方外交一直处于紧急状态，欧盟27过呼吁以色列保持克制以避免冲突。</p><p>美国曾多次表示不想参与以色列可能做出的任何反应，并选择加强对伊斯兰政权的制裁。</p><p>随后欧盟27 国也想加强对伊朗的制裁，主要针对伊朗的武器库。</p><p>虽然此前本次欧盟首脑27国峰会原本打算完全讨论经济问题，但这些问题在很大程度上将由于国际局势严峻而被忽略。</p><p>本次欧盟首脑峰会首先关注伊朗问题和伊朗袭击以色列的后果，</p><p>从所能看到的最新结论草案显示27国呼吁各方保持最大限度的克制，并将讨论扩大已经实施的针对伊朗的制裁措施 。</p><p>欧盟从 2023 年 7 月对伊朗采取了一系列限制措施 ，主要是因为伊朗在乌克兰战争中支持俄罗斯 ，因此欧盟禁止向伊朗出口所需的生产无人机某些部件。</p><p>欧盟的想法是将这些限制扩大到其他类型的武器如导弹，这一提议得到了法国和德国的支持，而且希望将这些限制扩大到德黑兰在中东的盟友如黎巴嫩真主党。</p><p>分析指出不过目前这些制裁很可能在很大程度上仍是象征性，主要因为伊朗是逃避西方制裁的高手。</p><p>在本次为期两天的欧盟峰会期间，27 国还讨论加沙人民的处境并呼吁立即无条件停火进行人道救援。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWat.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E8%25A7%2586%25E9%25A2%2591-%25E4%25BC%258A%25E6%259C%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2590%258E-%25E6%25AC%25A7%25E7%259B%259F%25E5%25B3%25B0%25E4%25BC%259A%25E8%25AE%25A8%25E8%25AE%25BA%25E5%25BB%25B6%25E9%2595%25BF%25E5%2588%25B6%25E8%25A3%2581%25E4%25BC%258A%25E6%259C%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWat.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWat.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWat.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>17/04/2024 - 11:21</div><img src="https://s.rfi.fr/media/display/8014ac0e-dc57-11ee-b9f1-005056bf30b7/w:1280/p:16x9/AP23200244616280.jpg"><p><strong>刚刚过去的周日北京半程马拉松的视频显示，三名来自非洲国家的选手似乎放慢速度，以便中国选手何杰超过他们并获胜。中国田径协会誓言加强对路跑赛事的调查与监管。        </strong></p><div><p>中国选手何杰报告以 1 小时 03 分 44 秒的成绩获胜，他领先埃塞俄比亚选手德杰内·海鲁·比基拉 (Dejene Hailu Bikila) 和肯尼亚选手罗伯特·凯特 (Robert Keter) 和威利·姆南加特 (Willy Mnangat)，这3个人均获得并列第二名。</p><p>据网上分享的视频显示，三名领先的跑步者向还稍稍落后的何杰挥手，示意终点线。最终四个人一起跑完了整个比赛，总里程刚刚超过 13 英里。</p><p>肯尼亚选手姆南加特告诉英国广播公司，他们三人只是作为起跑者参加比赛，并不计成绩。然而，按照惯例，他们的参赛号码布并没有表明他们是起跑后跑跑而已。</p><p>北京市体育主管部门北京市体育局表示，正在对该事件进行调查，调查结果将在稍后公布。该机构还说，“总体来看，路跑赛事整体运行平稳，但赛事组织管理方面的问题也暴露出来，引起了广泛关注。”</p><p>据路透社说，长跑在中国越来越受欢迎，但比赛却有作弊和组织不善的历史。比如，2018年深圳半程马拉松赛中，有258名参赛者被证实作弊。 2010年，中国山东女子半程马拉松冠军因被发现由他人代跑而被剥夺了冠军头衔。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E5%259B%25BD%25E7%2594%25B0%25E5%258D%258F%25E5%2587%25BA%25E9%259D%25A2%25E8%25AF%25B4%25E8%25A6%2581%25E8%25B0%2583%25E6%259F%25A5%25E5%258D%258A%25E7%25A8%258B%25E9%25A9%25AC%25E6%258B%2589%25E6%259D%25BE%25E4%25BD%259C%25E5%25BC%258A%25E6%258C%2587%25E6%258E%25A7%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
