--- a/articles/rfi/999992.md
+++ b/articles/rfi/999992.md
@@ -1,5 +1,5 @@
-<!--1713305701000-->
-[所罗门群岛将举行全国选举](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240416-%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE)
+<!--1713316501000-->
+[以色列呼吁对伊朗导弹项目实施新的制裁](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81)
 ------
 
-<div>16/04/2024 - 22:49</div><img src="https://s.rfi.fr/media/display/72f66436-fa84-11ee-9d74-005056bf30b7/w:1280/p:16x9/2024-03-25T051154Z_17230021_RC2O02AQY5SK_RTRMADP_3_SOLOMONISLANDS-ELECTION.JPG"><p><strong></strong></p><div><p>大约 6780 名选举官员将参与其中—是 2019 年选举人数的两倍，因为选民还将选出新的省议会和霍尼亚拉市议会。为了防止发生骚乱，澳大利亚、新西兰和巴布亚新几内亚等邻国已在选举期间派出警察协助维持安全，因为此前选举之后都会出现一段时期的骚乱。</p><p>夏威夷大学太平洋岛屿研究中心副教授兼前主任塔西修斯·卡布陶拉卡称，这次选举“可能是所罗门群岛自独立以来最重要的一次”，因为该国持续存在的经济问题及其在中美之间更大竞争中所扮演的角色。</p><p>对于外国观察家来说，主要问题是所罗门群岛与中国的持续关系以及总理索加瓦雷是否会再次当选。索加瓦雷因在 2019 年将外交承认从台湾转为中国而闻名于海外。</p><p>这一有争议的决定引发了骚乱，2021 年 11 月，抗议者瞄准霍尼亚拉的唐人街，并试图冲进索加瓦雷的住所，应政府要求，在澳大利亚警察特遣队的帮助下恢复了和平。</p><p>随后在 2022 年，索加瓦雷与北京签署了一项秘密安全协议，引起了澳大利亚、新西兰和美国的恐慌，这些国家担心中国有一天可能会在那里建立海军基地，从而极大地扩大北京的军事影响力，该岛链位于澳大利亚布里斯班市以东约 2000 公里（1200 英里）处，距中国上海市东南部仅 6000 多公里（3728 英里）处。</p><p>索加瓦雷的最高职位竞争对手之一、直言不讳的国会议员、该国第一任总理的儿子小彼得·凯尼洛雷亚 (Peter Kenilorea Jr) 已承诺将与台湾建立关系。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240416-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E7%25BE%25A4%25E5%25B2%259B%25E5%25B0%2586%25E4%25B8%25BE%25E8%25A1%258C%25E5%2585%25A8%25E5%259B%25BD%25E9%2580%2589%25E4%25B8%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE%20-%20https%3A%2F%2Frfi.my%2FAWUK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE%20-%20https%3A%2F%2Frfi.my%2FAWUK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 01:17</div><img src="https://s.rfi.fr/media/display/acf0f842-fadc-11ee-bb8f-005056bf30b7/w:1280/p:16x9/AP24105783712299.jpg"><p><strong>在伊朗对以色列进行空袭之后，以色列4月16日呼吁对伊朗实施新的制裁。以色列外长 卡茨（Israel Katz）在社交媒体上表示，他已经联系了30多个国家，推动对伊朗导弹项目进行制裁，并宣布伊朗革命卫队为恐怖组织。        </strong></p><div><p>尽管世界各国领导人恳求缓解紧张局势，但以色列似乎决心采取军事报复措施。</p><p>以色列军方官员星期一说，德黑兰必须要为周六发射大约350枚导弹和无人机的空袭付出代价，其中许多是从伊朗本土发射的。</p><p>以色列武装部队参谋长哈勒维（Herzi Halevi）中将说，伊朗的空袭“将得到回应”。</p><p>以色列军方领导人没有细谈将做出什么回应，尽管以色列国防军发言人哈加里（Daniel Hagari）海军少将说，回应将在“我们选择的时刻”做出。</p><p>以色列发出这些强硬的言辞正值以色列最坚定的支持者美国也敦促以色列展示克制之际。华盛顿说，伊朗的导弹和无人机空袭 没有造成多少损害，这本身就是一个巨大的胜利。</p><p>美国是已经将伊朗革命卫队定为恐怖组织的几个国家之一。随着联合国制裁的到期，美国自从去年10月起已经对伊朗弹道导弹项目实施了几轮制裁。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWV7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2591%25BC%25E5%2590%2581%25E5%25AF%25B9%25E4%25BC%258A%25E6%259C%2597%25E5%25AF%25BC%25E5%25BC%25B9%25E9%25A1%25B9%25E7%259B%25AE%25E5%25AE%259E%25E6%2596%25BD%25E6%2596%25B0%25E7%259A%2584%25E5%2588%25B6%25E8%25A3%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWV7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWV7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWV7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
