--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-18 [拜登呼吁将中国钢铁和铝的关税提高为三倍](/articles/dw/1025872.md)
+
 4-17 [中国和沙特在以伊冲突中斡旋？](/articles/dw/1025873.md)
 
 4-17 [拜登呼吁将中国钢铁和铝的关税提高三倍](/articles/dw/1025874.md)
@@ -598,6 +600,4 @@
 3-23 [德语媒体：中国影响力扩大之恶果](/articles/dw/1026170.md)
 
 3-23 [媒体：俄罗斯黑客瞄准德国政客](/articles/dw/1026171.md)
-
-3-23 [政府停摆之际，美参议院通过1.2万亿预算法案](/articles/dw/1026172.md)
 
