--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-18 [面对中国罕见的核谈判邀请，美国该怎么做](/articles/nyt/1042851.md)
+
 4-18 [拜登呼吁大幅提高对中国钢铁和铝产品关税](/articles/nyt/1042852.md)
 
 4-17 [AI巨头G42获微软15亿美元投资，将弃用华为设备](/articles/nyt/1042853.md)
@@ -598,6 +600,4 @@
 1-10 [美国防部长患病手术住院白宫均不知情引发争议](/articles/nyt/1043149.md)
 
 1-10 [担忧中国窃取技术，美国会议员要求政府调查AI巨头G42](/articles/nyt/1043150.md)
-
-1-10 [美国海军士官因向中国提供军事信息获刑27个月](/articles/nyt/1043151.md)
 
