--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-18 [卖杏花｜“猫一杯”猝死的真正原因](/articles/cdt/341548.md)
+
 4-18 [每日一语 2024.4.17](/articles/cdt/341550.md)
 
 4-18 [歪脑｜在台流亡藏人身份困境：和台湾有“共同敌人”，却也不被看做“自己人”](/articles/cdt/341555.md)
@@ -598,6 +600,4 @@
 3-15 [同州府｜西安网友接到燕郊警方删帖电话“你不删，后期我们公安机关再找你](/articles/cdt/342654.md)
 
 3-15 [【404文库】凤凰周刊｜燕郊爆炸首夜：有人“宁愿睡大街，也不想睡在被炸过的房子里”，有人怀疑燃气泄漏是地铁施工所致](/articles/cdt/342656.md)
-
-3-14 [【立此存照】中国外交部｜美国所谓“言论自由”的事实真相](/articles/cdt/342658.md)
 
