--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-18 [菲律宾海警队将首次参加美菲“肩并肩”联演 北京要求菲方遵守“君子协定”](/articles/voa/1016295.md)
+
+4-18 [王毅访问雅加达 双方承诺持续深化关系](/articles/voa/1016296.md)
+
 4-18 [所罗门群岛反对派总理角逐者重申若当选将废除与中国的安全协议](/articles/voa/1016297.md)
 
 4-18 [日韩领导人通电话 强调将持续深化美日韩三方合作](/articles/voa/1016298.md)
@@ -596,8 +600,4 @@
 4-7 [泽连斯基：乌克兰没有援助就可能无法自我防御](/articles/voa/1016593.md)
 
 4-7 [库列巴访问新德里：印度能够给乌克兰带来和平？](/articles/voa/1016594.md)
-
-4-7 [加沙战争在“死亡和毁灭”中进行到了第六个月](/articles/voa/1016595.md)
-
-4-7 [台湾科技岛面临人才荒 东南亚大学生留学盼圆梦](/articles/voa/1016596.md)
 
