--- a/articles/rfi/999958.md
+++ b/articles/rfi/999958.md
@@ -1,5 +1,5 @@
-<!--1713390302000-->
-[英国奥委会主席“担忧”巴黎奥运开幕式安全](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240417-%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD-%E6%8B%85%E5%BF%A7-%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8)
+<!--1713392101000-->
+[欧盟要求 TikTok 就其向用户付费的奖励服务做出解释](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82-tiktok-%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A)
 ------
 
-<div>17/04/2024 - 22:47</div><img src="https://s.rfi.fr/media/display/b3a284be-fcfb-11ee-94c8-005056a97e36/w:1280/p:16x9/BO5U4OISMZE5PA5JDDAO2I2WBY.png"><p><strong></strong></p><div><p>以往的开幕式都是在封闭的体育馆举行。对于这次特殊的开幕式，人们特别担心安全问题，因为届时将有船只载着运动员沿塞纳河进行长达6公里的游行，堤岸上会有众多的民众观看。</p><p>英国奥委会首席执行官安迪·安森表示：  “如果我们不考虑这一点，那就太天真了。我们的首要任务是确保所有运动员、广大随行人员和观众的安全”。</p><p>巴黎在迎来奥运倒计时100天的重要时刻，一个重量级人物如此表态，令人担忧。</p><p>4月15日，法国总统马克龙在大皇宫内接受了法国媒体RMC与BFM TV的联合采访。在谈到备受关注的这场在塞纳河上举行的奥运开幕式时，马克龙再次重申了对成功举办这场开幕式的信心，但同时也表示，鉴于可能存在的安全风险，他出人意料地提出来两套备选方案。</p><p>“我们也在同时研究其他计划，如果届时在塞纳河上举办开幕式面临过高的安全风险，”马克龙说。“我们可能会限制人数将开幕式放在特罗卡德罗广场举行，甚至是改在法兰西体育场举行。”</p><p>将开幕式从传统的体育场移到开放的城市空间，原本是巴黎奥组委一次极具想象力的设计。按照组委会目前的方案，届时将有约10500名运动员搭乘船只，沿着塞纳河由东向西航行约6公里至埃菲尔铁塔对岸的特罗卡德罗广场，参加在那里举行的庆祝仪式。而河岸两边，将有约30万名观众能现场观看这一盛会。</p><p>法国体育部长欧迪亚-卡斯特拉（Amelie Oudea-Castera）17日表示要保持乐观。她说，“奥运会将为国家带来的好处远远超过其所付出的代价”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWh4.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240417-%25E8%258B%25B1%25E5%259B%25BD%25E5%25A5%25A5%25E5%25A7%2594%25E4%25BC%259A%25E4%25B8%25BB%25E5%25B8%25AD-%25E6%258B%2585%25E5%25BF%25A7-%25E5%25B7%25B4%25E9%25BB%258E%25E5%25A5%25A5%25E8%25BF%2590%25E5%25BC%2580%25E5%25B9%2595%25E5%25BC%258F%25E5%25AE%2589%25E5%2585%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E2%80%9C%E6%8B%85%E5%BF%A7%E2%80%9D%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8%20-%20https%3A%2F%2Frfi.my%2FAWh4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E2%80%9C%E6%8B%85%E5%BF%A7%E2%80%9D%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8%20-%20https%3A%2F%2Frfi.my%2FAWh4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWh4.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E2%80%9C%E6%8B%85%E5%BF%A7%E2%80%9D%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 18:00</div><img src="https://s.rfi.fr/media/display/db5c5a90-ec41-11ee-aeab-005056bfb2b6/w:1280/p:16x9/gettyimages-1191303754.jpg"><p><strong>本周三（4月17号），欧盟委员会要求社交网络 TikTok （ 海外版抖音） 就其在法国和西班牙推出的奖励观看视频的新服务所带来的成瘾风险做出解释。        </strong></p><div><p>  4 月 11 日，TikTok 宣布在法国和西班牙推出新服务 TikTok Lite。 TikTok Lite 有一项针对 18 岁及以上用户的新功能："奖励计划"，允许用户通过完成 TikTok 上的某些 "任务 "获得积分，如观看视频、点赞、关注创作者、邀请朋友加入 TikTok 等。这些积分可以兑换成奖励，如亚马逊优惠券、贝宝礼品卡或 TikTok 币（可用于给创作者小费）。</p><p>法新社报道， 欧盟行政机构解释说，已要求中国字节跳动集团旗下的 TikTok 提供 "风险评估的细节"，并强调"在欧盟推出新的 TikTok Lite 应用程序之前本应进行风险评估"。</p><p>该委员会说："这涉及到新的“奖励” 程序对保护未成年人和用户心理健康的潜在影响，特别是在可能刺激成瘾行为方面。”</p><p>这项正式请求是在欧洲新数字服务立法（DSA）的背景下提出的，该立法自去年起对包括 TikTok 在内的 22 家主要互联网公司实施了更严格的规定，以保障用户的安全。</p><p>欧盟委员会目前是欧盟的数字监管机构，有权监督和处罚违规者。本周三启动的程序并非首次涉及 TikTok。</p><p>TikTok 必须在 24 小时内提交对新申请的 "风险评估"，并在 4 月 26 日前回答一系列问题。</p><p>周三宣布的信息请求在现阶段并不构成质疑。但这是程序的第一步，一旦证实违反规定，可能会启动正式调查，并最终受到严厉的经济处罚。</p><p> 报道称， 欧盟委员会已于 2024 年 2 月对 TikTok 提起正式诉讼，怀疑其在未成年人保护、广告透明度、研究人员获取数据以及与其应用程序的成瘾性设计和有害内容有关的风险管理等方面违反了《DSA》。委员会目前正在收集更多证据。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWf2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E6%25AC%25A7%25E7%259B%259F%25E8%25A6%2581%25E6%25B1%2582-tiktok-%25E5%25B0%25B1%25E5%2585%25B6%25E5%2590%2591%25E7%2594%25A8%25E6%2588%25B7%25E4%25BB%2598%25E8%25B4%25B9%25E7%259A%2584%25E5%25A5%2596%25E5%258A%25B1%25E6%259C%258D%25E5%258A%25A1%25E5%2581%259A%25E5%2587%25BA%25E8%25A7%25A3%25E9%2587%258A&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82%20TikTok%20%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A%20-%20https%3A%2F%2Frfi.my%2FAWf2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82%20TikTok%20%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A%20-%20https%3A%2F%2Frfi.my%2FAWf2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWf2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82%20TikTok%20%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
