--- a/articles/rfi/999975.md
+++ b/articles/rfi/999975.md
@@ -1,5 +1,5 @@
-<!--1713363302000-->
-[以色列罕派议会代表团访问台湾 称台以面临艰困国际处境 国家小却很强](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240417-%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE-%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83-%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA)
+<!--1713366902000-->
+[北京称瑞士乌克兰和平会议条件尚不成熟](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F)
 ------
 
-<div>17/04/2024 - 14:52</div><img src="https://s.rfi.fr/media/display/1a830ca0-ac73-11ee-bb7f-005056bf30b7/w:1280/p:16x9/AP23362427534236.jpg"><p><strong>台湾立法院长韩国瑜今（17）日在立法院接见“以色列国会议员访问团”以色列国会友台小组主席杜伯斯基（Boaz Toporovsky）议员一行。        </strong></p><div><p>据自由时报今天报道称，台湾立法院长韩国瑜今日会见来访的“以色列国会议员访问团”时表示，台湾与以色列互设代表处迄已逾31年，双方互动都是基于宏观的视野，在学术、科技、能源、农业等领域的交流尤为热络，盼在共同努力下，未来双方交流合作更加深化广化，互蒙其利。韩国瑜并说，台以两国同样缺乏天然资源匮乏、仰赖专业人才，且都面临外在强敌的威胁，但共享重视家庭与教育等传统文化及民主、法治等普世价值，是以双方的合作更显得重要。</p><p>“以色列国会友台小组”主席杜伯斯基议员致词时首先感谢台湾对以色列的坚定支持，他提及以色列目前仍处于战争状态，以色列对抗的是恐怖主义，尤其以国在去年10月遭受哈马斯恐怖攻击、今年4月14日遭受伊朗突袭攻击时，台湾都在第一时间发挥道德勇气，表达关切与支持，使该国政府及人民均深刻感受到台以间深厚的友谊。</p><p>杜伯斯基主席续表示，台湾与以色列都是蕞尔小国，同面临着非常艰困的国际处境，然而国家虽小却很强盛，两国除在科技与其他领域发展都很先进外，更有着共享的价值与信念，两国的共同使命是一起深化双边合作交流，为下一代创造更美好的未来。</p><p>以色列毕兹穆思（Boaz Bismuth）议员表示，台以两国是共享普世价值的民主伙伴，他特别感谢台湾政府及立法部门在以色列遭受外来恐怖攻击时，总是于第一时间发布声明表达支持，两国间的真挚友谊令人感动。另他对台湾国会三党不过半的多元政治环境表达崇高的敬意与羡慕，因为以色列国会席次系由13个不同政党组成，期许未来持续深化国会交流及友好情谊。</p><p>据该报道，韩国瑜接着代表立法院对以色列近日再度遭受外来攻击表达慰问，并盼受难者能够安息，伤者能够尽速痊愈，流离失所者能够重建家园，更希望早日恢复和平。韩国瑜另表示，未来以色列若欲透过在台新建犹太教堂来促进双边交流，立法院乐愿提供必要的协助。</p><p>台湾立法院副院长江启臣则表示，近年以色列陆续与韩国、越南等东亚国家签订双边自由贸易协定，以色列在国际社会中也参与了许多重要的功能性组织，盼未来也能支持台湾参与国际社群，并与台湾携手共创更多的发展与繁荣。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcE.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240417-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E7%25BD%2595%25E6%25B4%25BE%25E8%25AE%25AE%25E4%25BC%259A%25E4%25BB%25A3%25E8%25A1%25A8%25E5%259B%25A2%25E8%25AE%25BF%25E9%2597%25AE%25E5%258F%25B0%25E6%25B9%25BE-%25E7%25A7%25B0%25E5%258F%25B0%25E4%25BB%25A5%25E9%259D%25A2%25E4%25B8%25B4%25E8%2589%25B0%25E5%259B%25B0%25E5%259B%25BD%25E9%2599%2585%25E5%25A4%2584%25E5%25A2%2583-%25E5%259B%25BD%25E5%25AE%25B6%25E5%25B0%258F%25E5%258D%25B4%25E5%25BE%2588%25E5%25BC%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE%20%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83%20%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA%20-%20https%3A%2F%2Frfi.my%2FAWcE.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE%20%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83%20%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA%20-%20https%3A%2F%2Frfi.my%2FAWcE.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcE.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE%20%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83%20%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 14:16</div><img src="https://s.rfi.fr/media/display/37df5d2e-fca2-11ee-9c32-005056bf30b7/w:1280/p:16x9/2024-04-17T092616Z_1357906527_RC2987AJQIZX_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>瑞士上周宣布，希望于 6 月 15 日至 16 日举行乌克兰和平会议。但俄罗斯宣布不不出席，并称没有俄罗斯的参与，这个会议不会有意义。中国是否支持该会议引发关注。        </strong></p><div><p>据法新社说，在德国总理朔尔茨发表评论肯定北京方面似乎支持该会议。近日访问中国的德国总理朔尔茨周二在与中国国家主席习近平会晤期间表示，柏林和北京希望“就推动在瑞士举办高级别会议进行深入、积极的磋商”。</p><p>周三，当被问及北京是否会推动莫斯科参加此次会议时，中国外交部发言人林剑对德国总理的言论进行了限定。据林剑说，“据我所知，这次和平会议仍在准备中，还有很多工作要做。”</p><p>林剑中国外交部例行新闻发布会上称，习近平在会见朔尔茨时表示，中国“支持及时召开俄罗斯和乌克兰承认的、各方平等参与、公平讨论一切和平方案的国际和平会议”。</p><p>法新社指有评论认为，在目前的情况下，中方并不支持在瑞士举行这次会议，俄罗斯也不参加。</p><p>在瑞士宣布组织这次会议后，莫斯科认为在俄罗斯缺席的情况下举行乌克兰问题谈判“没有意义”。</p><p>在乌克兰危机上，中国呼吁对话，反对使用核武器，并敦促尊重“所有国家”的领土完整，这意味着乌克兰也包括在内。</p><p>但北京从未公开谴责莫斯科入侵乌克兰，并经常呼吁考虑俄罗斯对北约的安全担忧。十多年来，中国和俄罗斯的关系日益密切，因为两国在国际舞台上共同谴责西方霸权。</p><p>自乌克兰入侵以来，中俄两国加强了经济、军事和外交合作。</p><p>据中国官方新华社说，习近平周二向朔尔茨提出了防止乌克兰危机“失控”的“四项原则”。据习近平表示，“我们要以维护和平稳定为中心，不要自私地利用局势”。</p><p>中国还呼吁“不要火上浇油”。法新社说，这可以理解为中国暗批美国人和欧洲人向基辅运送武器。</p><p>中国国家主席还呼吁，“我们必须创造恢复和平所需的条件”并“减少对世界经济的影响”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbn.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E5%258C%2597%25E4%25BA%25AC%25E7%25A7%25B0%25E7%2591%259E%25E5%25A3%25AB%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E5%2592%258C%25E5%25B9%25B3%25E4%25BC%259A%25E8%25AE%25AE%25E6%259D%25A1%25E4%25BB%25B6%25E5%25B0%259A%25E4%25B8%258D%25E6%2588%2590%25E7%2586%259F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F%20-%20https%3A%2F%2Frfi.my%2FAWbn.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F%20-%20https%3A%2F%2Frfi.my%2FAWbn.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbn.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
