--- a/articles/rfi/999983.md
+++ b/articles/rfi/999983.md
@@ -1,5 +1,5 @@
-<!--1713356102000-->
-[视频 伊朗袭击以色列后 欧盟峰会讨论延长制裁伊朗](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E8%A7%86%E9%A2%91-%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E-%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97)
+<!--1713356105000-->
+[中美防长刚通电话 中国军机台湾海峡跟踪美国海军巡逻机](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D-%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA)
 ------
 
-<div>17/04/2024 - 13:25</div><img src="https://s.rfi.fr/media/display/7080199c-e6e1-11ee-bb42-005056a97e36/w:1280/p:16x9/AP24080521474896.jpg"><p><strong>欧盟首脑在布鲁塞尔举行会议，中东局势的危险升级是本次欧洲首脑会议的重要议题。欧盟可能跟随美国宣布对伊朗延长制裁措施，详情请见France24台记者 艾利克斯-勒布尔东（Alix Le Bourdon） 报道。        </strong></p><div><p>欧盟首脑今明两天在布鲁塞尔举行27个成员国峰会，中东局势的危险升级是本次欧洲首脑会议的重要议题，根据最新草案，欧盟可能跟随美国宣布对伊朗延长制裁措施，</p><p>France24台记者 艾利克斯-勒布尔东（Alix Le Bourdon） 从布鲁塞尔发出的报道指出，自从伊朗袭击以色列以来，西方外交一直处于紧急状态，欧盟27过呼吁以色列保持克制以避免冲突。</p><p>美国曾多次表示不想参与以色列可能做出的任何反应，并选择加强对伊斯兰政权的制裁。</p><p>随后欧盟27 国也想加强对伊朗的制裁，主要针对伊朗的武器库。</p><p>虽然此前本次欧盟首脑27国峰会原本打算完全讨论经济问题，但这些问题在很大程度上将由于国际局势严峻而被忽略。</p><p>本次欧盟首脑峰会首先关注伊朗问题和伊朗袭击以色列的后果，</p><p>从所能看到的最新结论草案显示27国呼吁各方保持最大限度的克制，并将讨论扩大已经实施的针对伊朗的制裁措施 。</p><p>欧盟从 2023 年 7 月对伊朗采取了一系列限制措施 ，主要是因为伊朗在乌克兰战争中支持俄罗斯 ，因此欧盟禁止向伊朗出口所需的生产无人机某些部件。</p><p>欧盟的想法是将这些限制扩大到其他类型的武器如导弹，这一提议得到了法国和德国的支持，而且希望将这些限制扩大到德黑兰在中东的盟友如黎巴嫩真主党。</p><p>分析指出不过目前这些制裁很可能在很大程度上仍是象征性，主要因为伊朗是逃避西方制裁的高手。</p><p>在本次为期两天的欧盟峰会期间，27 国还讨论加沙人民的处境并呼吁立即无条件停火进行人道救援。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWat.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E8%25A7%2586%25E9%25A2%2591-%25E4%25BC%258A%25E6%259C%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2590%258E-%25E6%25AC%25A7%25E7%259B%259F%25E5%25B3%25B0%25E4%25BC%259A%25E8%25AE%25A8%25E8%25AE%25BA%25E5%25BB%25B6%25E9%2595%25BF%25E5%2588%25B6%25E8%25A3%2581%25E4%25BC%258A%25E6%259C%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWat.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWat.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWat.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 11:05</div><img src="https://s.rfi.fr/media/display/9dceba52-b9fe-11ea-a7ad-005056bf87d6/w:1280/p:16x9/roblin_poseidon.jpg"><p><strong>中国军方周三报告，派出战斗机对飞越敏感台湾海峡的美国海军巡逻机进行监视和警告。中国军方谴责美国此次在台湾海峡的飞行是“公开炒作”。美国军方称，“美国根据国际法在台湾海峡开展行动，维护了所有国家的航行权利和自由。”路透社说，此事件发生在中美国防部长互通电话几小时后。        </strong></p><div><p>中国派出战斗机在台湾海峡跟踪美国海军飞机。中国军方报告派出战斗机对飞越敏感台湾海峡的美国海军巡逻机进行监视和警告。</p><p>路透社的报道称，中国声称对民主治理的台湾拥有主权，并表示对该海峡拥有管辖权。台湾和美国对此存在争议，称台湾海峡是国际水道。</p><p>据美国海军第七舰队报告，P-8A海神海上巡逻侦察机也用于反潜任务，在国际空域飞越了台湾海峡。</p><p>美国在一份声明中表示：“美国根据国际法在台湾海峡开展行动，维护所有国家的航行权利和自由。” 并说，“这架飞机飞越台湾海峡表明了美国对自由开放的印太地区的承诺。”</p><p>中国军方称此次飞行是“公开炒作”，并公告说已派出战机对美机进行监视和警告，并且“依法依规予以处理”。</p><p>解放军东部战区在声明中表示，战区部队始终保持高度戒备，坚决捍卫国家主权安全和地区和平稳定。</p><p>根据台湾国防部消息，美军飞机经海峡向南飞行，台军已监测情况，但未发现任何异常。</p><p>上次美国海军宣布飞越台湾海峡是在去年12月，中国军方表示也派出了战斗机对飞机进行监视和警告。</p><p>最新的飞越任务是在美国国防部长奥斯汀与中国国防部长董军通话后不久进行的，两国防长通话是两国寻求恢复军事关系一年多来的首次接触。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYa.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E7%25BE%258E%25E9%2598%25B2%25E9%2595%25BF%25E5%2588%259A%25E9%2580%259A%25E7%2594%25B5%25E8%25AF%259D-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2586%259B%25E6%259C%25BA%25E5%258F%25B0%25E6%25B9%25BE%25E6%25B5%25B7%25E5%25B3%25A1%25E8%25B7%259F%25E8%25B8%25AA%25E7%25BE%258E%25E5%259B%25BD%25E6%25B5%25B7%25E5%2586%259B%25E5%25B7%25A1%25E9%2580%25BB%25E6%259C%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAWYa.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAWYa.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYa.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
