--- a/articles/rfi/999992.md
+++ b/articles/rfi/999992.md
@@ -1,5 +1,5 @@
-<!--1713316501000-->
-[以色列呼吁对伊朗导弹项目实施新的制裁](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81)
+<!--1713339902000-->
+[导致五死大火揭消防违规情况严重且持续 旧患未除同区老厦再起火警](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E5%AF%BC%E8%87%B4%E4%BA%94%E6%AD%BB%E5%A4%A7%E7%81%AB%E6%8F%AD%E6%B6%88%E9%98%B2%E8%BF%9D%E8%A7%84%E6%83%85%E5%86%B5%E4%B8%A5%E9%87%8D%E4%B8%94%E6%8C%81%E7%BB%AD-%E6%97%A7%E6%82%A3%E6%9C%AA%E9%99%A4%E5%90%8C%E5%8C%BA%E8%80%81%E5%8E%A6%E5%86%8D%E8%B5%B7%E7%81%AB%E8%AD%A6)
 ------
 
-<div>17/04/2024 - 01:17</div><img src="https://s.rfi.fr/media/display/acf0f842-fadc-11ee-bb8f-005056bf30b7/w:1280/p:16x9/AP24105783712299.jpg"><p><strong>在伊朗对以色列进行空袭之后，以色列4月16日呼吁对伊朗实施新的制裁。以色列外长 卡茨（Israel Katz）在社交媒体上表示，他已经联系了30多个国家，推动对伊朗导弹项目进行制裁，并宣布伊朗革命卫队为恐怖组织。        </strong></p><div><p>尽管世界各国领导人恳求缓解紧张局势，但以色列似乎决心采取军事报复措施。</p><p>以色列军方官员星期一说，德黑兰必须要为周六发射大约350枚导弹和无人机的空袭付出代价，其中许多是从伊朗本土发射的。</p><p>以色列武装部队参谋长哈勒维（Herzi Halevi）中将说，伊朗的空袭“将得到回应”。</p><p>以色列军方领导人没有细谈将做出什么回应，尽管以色列国防军发言人哈加里（Daniel Hagari）海军少将说，回应将在“我们选择的时刻”做出。</p><p>以色列发出这些强硬的言辞正值以色列最坚定的支持者美国也敦促以色列展示克制之际。华盛顿说，伊朗的导弹和无人机空袭 没有造成多少损害，这本身就是一个巨大的胜利。</p><p>美国是已经将伊朗革命卫队定为恐怖组织的几个国家之一。随着联合国制裁的到期，美国自从去年10月起已经对伊朗弹道导弹项目实施了几轮制裁。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWV7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2591%25BC%25E5%2590%2581%25E5%25AF%25B9%25E4%25BC%258A%25E6%259C%2597%25E5%25AF%25BC%25E5%25BC%25B9%25E9%25A1%25B9%25E7%259B%25AE%25E5%25AE%259E%25E6%2596%25BD%25E6%2596%25B0%25E7%259A%2584%25E5%2588%25B6%25E8%25A3%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWV7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWV7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWV7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 09:41</div><img src="https://s.rfi.fr/media/display/6339dab8-fc8d-11ee-a56d-005056a97e36/w:1280/p:16x9/hk-202.jpg"><p><strong>香港早前一宗5死逾40人伤的火灾，起火原因可能是烟蒂烧着大厦一楼天井(不同单位围成的露天空间)杂物或电力装置超负荷造成，而起火地点储存大量胶袋及清洁工具则令火势迅速蔓延和浓烟四起，逾半楼层的防烟门亦因失修而未能发挥阻缓作用。事件揭发，消防处发出近30万张消防安全指示中，逾六成未被遵从，当中不少涉及上述火灾大厦所处区域。        </strong></p><div><p>正当特首李家超昨(16日)天声称已要求相关部门加快执法，并会在年内修例，以加强执法及提高罚则之时，同日下午同区内一幢有52年历史的金华大厦发生大火，有一百多名居民需要疏散，期间有冷气机烧至飞堕地下，幸而未造成重大伤亡，但却是区内一星期内第二宗火警。</p><p>与游客区尖沙咀毗连的佐敦区，区内有60年历史的华丰大厦上周叁(10日)发生夺命大火，造成五死逾40人受伤。事后经传媒查问，消防处证实，大厦消防装置的年度检查已过期年半，而当局今年2月9日巡查时，并未发现火警危险。但事实上，消防处曾于2008年向由业主组成以处理大厦管理事宜的业主立桉法团发出消防安全指示，但法团以不同理由推迟限期，结果是至今仍未遵办。</p><p>对于大厦未有按消防处的指示消除安全隐患，居民指大厦内的宾馆霸占业主立桉法团而拒绝进行耗费不低的工程，身兼法团主席的宾馆东主则予以否认，并指之前已维修近叁十道防烟明，至于仍在讨论的工程，则因工程投标商临时以倍数地大幅加价，法团正在处理，未料发生火警。</p><p>另外，消防处回覆传媒时透露，处方及屋宇署一共巡查了全港逾一万幢旧式楼宇，九成半需发出安全指示，合共超过 29万张，截至上月底，有11万张已获遵办或撤销。换言之，有大约62%的个桉仍未处理，当中，以火警所在的「油(麻地)尖(沙咀)旺(角)区」占最多，有1800多幢。</p><p>本台记者曾到尖沙咀区内有不少宾馆和食肆的重庆大厦，发现仍然人流如鰂，但逃生楼梯有摆放杂物丶个别楼层的消防装置被住户衣物遮蔽丶防烟门大开等情况均有出现。</p><p>违反消防安全指示只有罚款，根据《消防安全(建筑物)条例》，如业主或拥有人无合理辩解而没有遵从消防安全指示，一经定罪，可判罚款2.5万港元，每日另处罚款2500元。</p><p>事隔一星期，特首李家超在出席会议前表示，已要求消防处及屋宇署加快执法工作，包括压缩程序等，但由于旧楼数目逾万幢，必须定下执行优次，当局正就此进行审视。</p><p>另外，港府又会修例，以加强执法和增加罚则，同时容许当局介入维修消防设备，事后再追究不同单位的经济和违规责任。他指出，保安局会在今年内向立法会提交消防条例的修订草桉，较原订时间提前两丶叁个月。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWXY.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E5%25AF%25BC%25E8%2587%25B4%25E4%25BA%2594%25E6%25AD%25BB%25E5%25A4%25A7%25E7%2581%25AB%25E6%258F%25AD%25E6%25B6%2588%25E9%2598%25B2%25E8%25BF%259D%25E8%25A7%2584%25E6%2583%2585%25E5%2586%25B5%25E4%25B8%25A5%25E9%2587%258D%25E4%25B8%2594%25E6%258C%2581%25E7%25BB%25AD-%25E6%2597%25A7%25E6%2582%25A3%25E6%259C%25AA%25E9%2599%25A4%25E5%2590%258C%25E5%258C%25BA%25E8%2580%2581%25E5%258E%25A6%25E5%2586%258D%25E8%25B5%25B7%25E7%2581%25AB%25E8%25AD%25A6&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%AF%BC%E8%87%B4%E4%BA%94%E6%AD%BB%E5%A4%A7%E7%81%AB%E6%8F%AD%E6%B6%88%E9%98%B2%E8%BF%9D%E8%A7%84%E6%83%85%E5%86%B5%E4%B8%A5%E9%87%8D%E4%B8%94%E6%8C%81%E7%BB%AD%20%E6%97%A7%E6%82%A3%E6%9C%AA%E9%99%A4%E5%90%8C%E5%8C%BA%E8%80%81%E5%8E%A6%E5%86%8D%E8%B5%B7%E7%81%AB%E8%AD%A6%20-%20https%3A%2F%2Frfi.my%2FAWXY.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%AF%BC%E8%87%B4%E4%BA%94%E6%AD%BB%E5%A4%A7%E7%81%AB%E6%8F%AD%E6%B6%88%E9%98%B2%E8%BF%9D%E8%A7%84%E6%83%85%E5%86%B5%E4%B8%A5%E9%87%8D%E4%B8%94%E6%8C%81%E7%BB%AD%20%E6%97%A7%E6%82%A3%E6%9C%AA%E9%99%A4%E5%90%8C%E5%8C%BA%E8%80%81%E5%8E%A6%E5%86%8D%E8%B5%B7%E7%81%AB%E8%AD%A6%20-%20https%3A%2F%2Frfi.my%2FAWXY.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWXY.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%AF%BC%E8%87%B4%E4%BA%94%E6%AD%BB%E5%A4%A7%E7%81%AB%E6%8F%AD%E6%B6%88%E9%98%B2%E8%BF%9D%E8%A7%84%E6%83%85%E5%86%B5%E4%B8%A5%E9%87%8D%E4%B8%94%E6%8C%81%E7%BB%AD%20%E6%97%A7%E6%82%A3%E6%9C%AA%E9%99%A4%E5%90%8C%E5%8C%BA%E8%80%81%E5%8E%A6%E5%86%8D%E8%B5%B7%E7%81%AB%E8%AD%A6&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
