--- a/articles/rfi/999995.md
+++ b/articles/rfi/999995.md
@@ -1,5 +1,5 @@
-<!--1713303902000-->
-[耶伦：华盛顿准备加强对伊朗的制裁](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E8%80%B6%E4%BC%A6-%E5%8D%8E%E7%9B%9B%E9%A1%BF%E5%87%86%E5%A4%87%E5%8A%A0%E5%BC%BA%E5%AF%B9%E4%BC%8A%E6%9C%97%E7%9A%84%E5%88%B6%E8%A3%81)
+<!--1713316501000-->
+[以色列呼吁对伊朗导弹项目实施新的制裁](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81)
 ------
 
-<div>16/04/2024 - 22:42</div><img src="https://s.rfi.fr/media/display/9fb38c92-fc05-11ee-81f3-005056bf30b7/w:1280/p:16x9/2024-04-03T094420Z_334683959_RC26D0A5LJVP_RTRMADP_3_ZAMBIA-DEBT.JPG"><p><strong></strong></p><div><p>她强调“伊朗的行为威胁到该地区的稳定，并可能产生严重经济后果”。</p><p>根据演讲稿的内容，耶伦会表示，自 2021 年 1 月拜登入主白宫以来，美国财政部已“针对与恐怖主义和伊朗政权资助恐怖主义有关的 500 多名个人和实体”以及该地区与之相关的各种运动。 这是特别针对“伊朗的无人机和导弹计划及其对哈马斯、胡塞武装、真主党和伊拉克民兵的资助”。</p><p>耶伦女士将坚持这样一个事实：对哈马斯实施的制裁绝不能阻止向加沙居民提供援助； 财政部一直在努力“确保制裁不会阻碍重要的援助”。</p><p>“在加沙，超过 200 面临严重的粮食不安全，大多数人已经流离失所。 我们所有参加这些会议的人都有责任尽我们所能来结束这种痛苦。”</p><p>国际货币基金组织和世界银行的春季会议将持续一个星期。今年的会议仍将充满怀旧气氛，因为 2024是 国际货币基金和世界银行成立80周年。</p><p>两个机构诞生于1944年、第二次世界大战尚未结束时举行的布列登森林（Bretton Woods ）会议，当时盟国试图规范第二次世界大战结束后的国际金融秩序。</p><p>当时的金融挑战巨大，亚洲和欧洲的大片地区需要重建。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUD.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E8%2580%25B6%25E4%25BC%25A6-%25E5%258D%258E%25E7%259B%259B%25E9%25A1%25BF%25E5%2587%2586%25E5%25A4%2587%25E5%258A%25A0%25E5%25BC%25BA%25E5%25AF%25B9%25E4%25BC%258A%25E6%259C%2597%25E7%259A%2584%25E5%2588%25B6%25E8%25A3%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%80%B6%E4%BC%A6%EF%BC%9A%E5%8D%8E%E7%9B%9B%E9%A1%BF%E5%87%86%E5%A4%87%E5%8A%A0%E5%BC%BA%E5%AF%B9%E4%BC%8A%E6%9C%97%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWUD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%80%B6%E4%BC%A6%EF%BC%9A%E5%8D%8E%E7%9B%9B%E9%A1%BF%E5%87%86%E5%A4%87%E5%8A%A0%E5%BC%BA%E5%AF%B9%E4%BC%8A%E6%9C%97%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWUD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUD.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%80%B6%E4%BC%A6%EF%BC%9A%E5%8D%8E%E7%9B%9B%E9%A1%BF%E5%87%86%E5%A4%87%E5%8A%A0%E5%BC%BA%E5%AF%B9%E4%BC%8A%E6%9C%97%E7%9A%84%E5%88%B6%E8%A3%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 01:17</div><img src="https://s.rfi.fr/media/display/acf0f842-fadc-11ee-bb8f-005056bf30b7/w:1280/p:16x9/AP24105783712299.jpg"><p><strong>在伊朗对以色列进行空袭之后，以色列4月16日呼吁对伊朗实施新的制裁。以色列外长 卡茨（Israel Katz）在社交媒体上表示，他已经联系了30多个国家，推动对伊朗导弹项目进行制裁，并宣布伊朗革命卫队为恐怖组织。        </strong></p><div><p>尽管世界各国领导人恳求缓解紧张局势，但以色列似乎决心采取军事报复措施。</p><p>以色列军方官员星期一说，德黑兰必须要为周六发射大约350枚导弹和无人机的空袭付出代价，其中许多是从伊朗本土发射的。</p><p>以色列武装部队参谋长哈勒维（Herzi Halevi）中将说，伊朗的空袭“将得到回应”。</p><p>以色列军方领导人没有细谈将做出什么回应，尽管以色列国防军发言人哈加里（Daniel Hagari）海军少将说，回应将在“我们选择的时刻”做出。</p><p>以色列发出这些强硬的言辞正值以色列最坚定的支持者美国也敦促以色列展示克制之际。华盛顿说，伊朗的导弹和无人机空袭 没有造成多少损害，这本身就是一个巨大的胜利。</p><p>美国是已经将伊朗革命卫队定为恐怖组织的几个国家之一。随着联合国制裁的到期，美国自从去年10月起已经对伊朗弹道导弹项目实施了几轮制裁。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWV7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2591%25BC%25E5%2590%2581%25E5%25AF%25B9%25E4%25BC%258A%25E6%259C%2597%25E5%25AF%25BC%25E5%25BC%25B9%25E9%25A1%25B9%25E7%259B%25AE%25E5%25AE%259E%25E6%2596%25BD%25E6%2596%25B0%25E7%259A%2584%25E5%2588%25B6%25E8%25A3%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWV7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWV7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWV7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
