--- a/articles/rfi/999993.md
+++ b/articles/rfi/999993.md
@@ -1,5 +1,5 @@
-<!--1713318302000-->
-[舒尔茨访华：未来可能是人人为己，唯一的赢家将是习近平 - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240416-%E8%88%92%E5%B0%94%E8%8C%A8%E8%AE%BF%E5%8D%8E-%E6%9C%AA%E6%9D%A5%E5%8F%AF%E8%83%BD%E6%98%AF%E4%BA%BA%E4%BA%BA%E4%B8%BA%E5%B7%B1%EF%BC%8C%E5%94%AF%E4%B8%80%E7%9A%84%E8%B5%A2%E5%AE%B6%E5%8F%AF%E8%83%BD%E6%98%AF%E4%B9%A0%E8%BF%91%E5%B9%B3)
+<!--1713345302000-->
+[欧盟立法选举在即 谁最不看好欧盟？原来是法国人](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3-%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F-%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA)
 ------
 
-<div>17/04/2024 - 01:10</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>法国世界报周二就德国总理舒尔茨对中国的访问发表了社论。在法国和德国关系疏远的背景下，法国世界报担心未来会出现人人为己的局面。法国世界报周二在社论中表示，德国总理在中国呼吁“公开和公平”的竞争，似乎，德国总理是忽视了北京只认力量较量的这个事实。如果欧洲人不团结起来作为一个整体来行动的话，就会面临被削弱的风险。                    </strong></p><div><p>法国世界报指出，2022年2月27日，即俄罗斯入侵乌克兰后三天，德国总理在德国联邦议会的讲台上庄严地宣布，“时代变了”(Zeitenwende)。</p><p>德国被迫承认多年来自己一直把赌注押在普京的理性上，把赌注押在依靠俄罗斯天然气的供应来维持德国工业的运转上，从而误入了歧途。</p><p>法国世界报表示，德国总理所说的“时代变了”不仅只涉及德国和俄国的关系。它还涉及到，在只知道弱肉强食的政权面前要捍卫民主和法治。</p><p>“时代变了”标志着“通过贸易来改变”（Wandel durch Handel）这一理论的终结。“通过贸易来改变”是德国的一个政治理论，根据该理论，通过与西方民主国家进行贸易，独裁政权必然会实现自由化。从这个意义上说，德国总理所说的时代变了，也事关中国。</p><p>然而，德国总理舒尔茨于4月14日星期日至4月16日星期二率领大型经济代表团访华显示了：当涉及与中国的关系时，舒尔茨这位德国社民党人对自己的定位与前总理默克尔是一致的，而不是与默克尔决裂。</p><p>法国世界报还指出，2023年3月，欧盟委员会主席冯德莱恩坚称需要“降低对中国的风险”，但尽管如此，许多德国企业家尤其是最大的德国企业家仍然认为，恰恰相反，主要的风险是没有足够地把赌押在雄心勃勃地要成为世界老大的全球第二大经济体中国的身上。目前在华经营的德国企业不少于5000家。</p><p><strong>“公开、公平”的竞争</strong></p><p>舒尔茨的环保部长贝尔博克（Annalena Baerbock）称习近平是“独裁者”，德国商界在“去风险”问题上存在分歧，而舒尔茨自己的政党社民党似乎相信中国可以影响俄罗斯在乌克兰问题上的立场。因此，舒尔茨在走钢丝。然而，舒尔茨呼吁中国进行“公开和公平”的竞争，似乎，德国总理忽视了北京是只认力量较量的这个事实。尽管中国的内需依然低迷，但习近平远没有做出丝毫的妥协，习近平是比以往任何时候都更加指望受到大量补贴的中国工业来征服新市场以确保中国经济有令人满意的增长。</p><p>身为中国共产党总书记的习近平事实上是一位保守派，他只信奉供给政策，他坚信，支持内需会让中国人懒惰，从而导致中国的衰落。舒尔茨是无法改变这种心态的。他应该更多地考虑众多欧洲国家对北京所持的保留意见，并从他自己做出的“时代变了”的总结中得出结论。</p><p>法国世界报的社论最后写道，2019年3月，习近平来到巴黎时，不仅受到马克龙的接见，还受到默克尔和时任欧盟委员会主席容克的接见。2024年春天，在中国国家主席准备对法国进行国事访问之前三周，德国总理访问中国。未来可能是人人为己，唯一的赢家可能是习近平。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div>
+<div>17/04/2024 - 10:45</div><img src="https://s.rfi.fr/media/display/c36512ec-bf69-11ee-8e73-005056a90284/w:1280/p:16x9/2024-01-08T190336Z_1637134550_RC2E2Z9ZWOZ4_RTRMADP_3_EUROPE-INVESTMENT-ACTIVISTS.JPG"><p><strong>欧洲联盟舆情民调今天公布的欧洲晴雨表调查显示，距离欧洲选举还有不到两个月的时间，法国人对欧盟表现出明显的悲观态度，而欧洲选举只引起法国少数人有兴趣。        </strong></p><div><p>据法新社今天报道说，在欧盟其他 26 个国家中，大多数受访者表示对欧盟的未来持乐观态度，其中丹麦、爱尔兰和立陶宛最为乐观。</p><p>法国是欧盟中仅次于德国的第二人口大国，也是唯一一个乐观主义者占少数（42%）的成员国，被悲观主义者（52%）超过。</p><p>法国近年来的这种趋势似乎有所发展，因为根据 2020 年底的一项调查，52% 的法国人对未来“非常”或“相当”乐观（相比之下，悲观主义者为 44%）。</p><p>在德国，乐观情绪仍然占大多数（60%），但与 2020 年（72%）相比也有所下降。</p><p>然而，欧盟并不是法国忧郁悲观情绪的唯一目标。因为如果 65% 的法国人认为“欧盟的事情正在朝着错误的方向发展”（相比之下，欧洲人的平均比例为 49%），那么更多的法国人 (76%) 认为他们正在朝着错误的方向发展。法国人多认为法国的方向错了。</p><p>法国人对个人生活水平的变化比欧洲平均水平更关心：69% 的人认为个人生活水平在过去五年中有所下降（而欧盟平均水平为 45%）。 53% 的人认为未来五年内还会下降（欧洲水平为 32%）。</p><p>欧盟人对欧盟（尤其是奥地利人和捷克人）抱有负面印象的人数也多于欧洲平均水平，并认为近年来欧盟在世界上的作用已变得“不那么重要”。</p><p>但法国人对欧洲议会的印象最差：如果41%的欧洲人对欧洲议会印象是正面的，那么只有27%的法国人对欧洲议会印象是正面的。 28% 的法国人（18% 的欧洲人）对这一重要的欧盟机构持反对意见。法国人中的大多数（53%）承认他们对欧洲选举不感兴趣，而欧盟平均有 60% 的公民对此感兴趣。</p><p>然而，绝大多数法国人（67%）表示，他们希望通过投票来续约这个总部位于斯特拉斯堡的议会，负责参与欧洲立法的通过。</p><p>关于欧盟及议会选举：只有 8% 的人知道这些选举的确切日期，这些选举是通过一轮直接普选产生的，定于 6 月 9 日在法国举行（在整个欧盟范围内于 6 月 6 日至 9 日之间举行）。 在欧洲，23%的受访者承认不知道投票何时举行，这一比例在法国上升至30%。法新社说，这显示是一个不小的问题。</p><p>当被问及法国的这种不信任时，欧洲议会发言人 Jaume Duch Guillot 强调，这“并不令人意外”。 “这是近年来的一个明显趋势，”他评论道，但不想提供任何解释。</p><p>在法国，一个非常反对欧洲建设的极右的国民联盟（RN，最右边）显然反而会是欧洲选举的赢家，最新民意调查显示，其得票率为 30-32%，远远领先于坚称拥护欧洲建设的总统马克龙的多数党名单（16-18%） ）。</p><p>据该报道，欧洲晴雨表调查是由欧洲议会委托于 2 月 7 日至 3 月 3 日对 27 个欧盟成员国的 26,411 名欧洲公民进行的。</p><p>选举后，欧洲议会总共将有 720 名代表，而目前为 705 名。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYH.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E6%25AC%25A7%25E7%259B%259F%25E7%25AB%258B%25E6%25B3%2595%25E9%2580%2589%25E4%25B8%25BE%25E5%259C%25A8%25E5%258D%25B3-%25E8%25B0%2581%25E6%259C%2580%25E4%25B8%258D%25E7%259C%258B%25E5%25A5%25BD%25E6%25AC%25A7%25E7%259B%259F-%25E5%258E%259F%25E6%259D%25A5%25E6%2598%25AF%25E6%25B3%2595%25E5%259B%25BD%25E4%25BA%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3%20%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F%EF%BC%9F%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWYH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3%20%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F%EF%BC%9F%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWYH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYH.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3%20%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F%EF%BC%9F%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
