--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-18 [数百中国人买签证“移民”德国 警方称或被遣返](/articles/dw/1025868.md)
+
 4-18 [越南反腐运动是否搞得过头了？](/articles/dw/1025869.md)
 
 4-18 [美中貿易戰再起？北京批301調查「一錯再錯」](/articles/dw/1025870.md)
@@ -598,6 +600,4 @@
 3-24 [危机笼罩之下 德国出生率明显下滑](/articles/dw/1026166.md)
 
 3-24 [用呼吸解锁手机？](/articles/dw/1026167.md)
-
-3-24 [黑暗料理还是创新美食？用昆虫做披萨](/articles/dw/1026168.md)
 
