--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-18 [台湾准总统赖清德与中国总理李强皆入选2024年《时代》杂志百大人物](/articles/voa/1016294.md)
+
 4-18 [菲律宾海警队将首次参加美菲“肩并肩”联演 北京要求菲方遵守“君子协定”](/articles/voa/1016295.md)
 
 4-18 [王毅访问雅加达 双方承诺持续深化关系](/articles/voa/1016296.md)
@@ -598,6 +600,4 @@
 4-7 [伊朗武装部队总参谋长重申对以色列袭击伊朗驻叙利亚领馆进行报复](/articles/voa/1016592.md)
 
 4-7 [泽连斯基：乌克兰没有援助就可能无法自我防御](/articles/voa/1016593.md)
-
-4-7 [库列巴访问新德里：印度能够给乌克兰带来和平？](/articles/voa/1016594.md)
 
