--- a/articles/rfi/999954.md
+++ b/articles/rfi/999954.md
@@ -1,5 +1,5 @@
-<!--1713393902000-->
-[阿联酋遭遇最大降雨   机场大乱   学校停课一周](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8-%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1-%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8)
+<!--1713431701000-->
+[台湾环保组织谈PFAS污染研究及对策 - 环境与发展](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E5%A2%83%E4%B8%8E%E5%8F%91%E5%B1%95/20240418-%E5%8F%B0%E6%B9%BE%E7%8E%AF%E4%BF%9D%E7%BB%84%E7%BB%87%E8%B0%88pfas%E6%B1%A1%E6%9F%93%E7%A0%94%E7%A9%B6%E5%8F%8A%E5%AF%B9%E7%AD%96)
 ------
 
-<div>17/04/2024 - 22:42</div><img src="https://s.rfi.fr/media/display/fb3ca3e6-fcfa-11ee-93d6-005056a97e36/w:1280/p:16x9/2000006893198.png"><p><strong></strong></p><div><p>这场降雨淹没了街道，连根拔起棕榈树，摧毁了建筑外墙。自1949年有记录以来，这个中东国家从未见过这样的降雨。在热门旅游目的地迪拜，航班被取消，交通中断，学校关闭至少一个星期。</p><p>根据机场的气象观测，周二仅12小时内就有100毫米（近4英寸）的降雨量。根据联合国的数据，这大约是迪拜全年的降雨量。</p><p>雨下得又大又快，洪水上涨，道路变成河流，有些驾驶人被迫弃车而逃。</p><p>此次降雨与穿越阿拉伯半岛并横跨阿曼湾的大型风暴系统有关。同样的系统也给附近的阿曼和伊朗东南部带来异常潮湿的天气。</p><p>阿曼国家紧急管理委员会表示，大雨引发的山洪爆发至少造成18人死亡。据阿曼国家通讯社报导，伤亡者包括学童。</p><p>阿联酋媒体和社群媒体帖文显示，暴雨对该国部分地区造成了严重破坏，包括道路倒塌和房屋被水淹没。</p><p>周二的社群媒体帖文显示，道路和停车场被洪水淹没，一些车辆完全被淹没。穿过迪拜的12车道高速公路谢赫扎耶德路（Sheikh Zayed Road）被部分淹没，导致人们陷入长达数小时的交通堵塞中。</p><p>周三，试图通过公路进入迪拜市中心的人们被困在高速公路上。由于道路堵塞，一些计程车司机拒绝载送通勤者。其中一些受困者从国外来到迪拜，参加定于下周初举行的世界区块链高峰会（World Blockchain Summit）。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgy.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E9%2598%25BF%25E8%2581%2594%25E9%2585%258B%25E9%2581%25AD%25E9%2581%2587%25E6%259C%2580%25E5%25A4%25A7%25E9%2599%258D%25E9%259B%25A8-%25E6%259C%25BA%25E5%259C%25BA%25E5%25A4%25A7%25E4%25B9%25B1-%25E5%25AD%25A6%25E6%25A0%25A1%25E5%2581%259C%25E8%25AF%25BE%25E4%25B8%2580%25E5%2591%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8%20%20%20%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1%20%20%20%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8%20-%20https%3A%2F%2Frfi.my%2FAWgy.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8%20%20%20%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1%20%20%20%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8%20-%20https%3A%2F%2Frfi.my%2FAWgy.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgy.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8%20%20%20%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1%20%20%20%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 10:45</div><img src="https://s.rfi.fr/media/display/1ec5bb4c-fccc-11ee-9768-005056a90284/w:1280/p:16x9/Screenshot%202024-04-17%20at%2017-05-27%20%E5%BE%9E%E9%9B%B6%E9%96%8B%E5%A7%8B%E8%AA%8D%E8%AD%98PFAS.png"><p><strong>法广在近期的节目中向大家介绍了美国以及欧洲国家的卫生机构对化学污染物PFAS的环境以及人体健康影响的评估，同时也向大家介绍了西方各国针对PFAS污染所采取的限制以及检测措施。鉴于PFAS污染无处不在，全世界各国的水土以及空气都受到了PFAS污染，那么，作为信息开放的台湾，台湾的PFAS污染状况如何？我们知道，台湾的半导体行业已经成为台湾的镇国之宝，而半导体产业链的各大环节都离不开带有PFAS的产品，台湾半导体行业对此有何对策？台湾政府针对PFAS污染又出台了哪些措施？                    </strong></p><div><p>就以上问题，法广电话采访了关注PFAS污染多年的<a href="https://www.taiwanwatch.org.tw/node/1520" target="_blank">看守台湾组织</a>的研究员林弈均先生 :</p><p><strong>法广：</strong>林先生，您好，非常感谢您接受法广的采访！首先请您介绍一下看守台湾是一个什么样的组织。</p><p><strong>林弈均：</strong>我们的协会算成立于1999年，是一个比较老的环保组织，我们主要关注台湾的生态与环境议题，我们的目标是“永续台湾”。我们一半以上的工作主要是翻译一些国外的先进的研究文章，将它们介绍给台湾的民众。其他关注的主要的议题就是台湾的废弃物，包括一些带有毒性的废弃物，一些工厂和企业对外排放的废弃物。</p><p><strong>法广：</strong>现在国际上都十分关注这些被叫做永久污染物的化学物质PFAS，你们关注这一话题已经很长时间，能否向大家介绍一下台湾的PFAS的污染现状以及政府采取的一些应对措施？</p><p><strong>林弈均：</strong>老实说，台湾政府还没有对这些污染物进行彻底的检查，政府定期调查的是国际上都调查的五种PFAS，也就是PFOA、PFOS、LPOS、POSF＋PFHxS，但是，没有去做进一步的工作。不过，台湾的学者很早就对这些污染物对人体健康进行了研究，其中最具有影响的就是台灣公共衛生學會理事長、台大環境與職業健康科學研究所特聘教授陳保中先生，他从2011年就发表论文，针对PFOA与PFOS在孕妇身体中的浓度对新生儿的影响，例如造成新生儿发育缓慢等等方面的缺陷，他的研究证明这两者之间的关联是十分密切的。去年，我们还同菲律宾的一位教授相合作，这位教授对菲律宾的一些在PFAS浓度高的工厂工作的妇女进行了调查，结果发现这些妇女的乳腺癌的发病率高于其他妇女。所以，学术界对PFAS引发癌症方面的研究已经有许多。另外。在PFAS对环境的污染方面，我们也已经有环境工程的学者在2009年和2014年对水中的鱼类进行了检测，结果发现受到工业园区污水污染的水中的鱼身上的PFAS的含量比其他鱼的PFAS浓度高出两百倍。</p><p><strong>法广：</strong>也就是说PFAS污染对环境以及人体健康造成的危害在台湾学术界已经成为共识，那么，台湾PFAS的污染的源头是什么？</p><p><strong>林弈均：</strong>其实，据我们了解，台湾基本上没有生产PFAS的厂家，总共只有一家生产PFAS的工厂，所以，台湾的PFAS污染主要来自进口的产品，或者是进口的原材料，用于半导体或者别的产业。</p><p><strong>法广：</strong>您知道半导体产业为什么使用PFAS以及使用的量是多少吗？</p><p><strong>林弈均：</strong>其实我们在台湾也很难获得这方面的信息，因为政府与企业都以工业机密为由拒绝回答，这也是我们为什么很难获得那家生产PFAS的企业的信息。根据我们从国外的有关半导体产业的介绍，我们了解到半导体制造业在生产电路板时就使用PFAS产品，因为它可以在非常薄的状况下发挥阻热，阻湿等功能，甚至还可以阻电，可以当作隔离层，而且成本 还十分低廉。</p><p><strong>法广：</strong>那么，台湾政府是否出台一些措施来应对PFAS污染，台湾政府也同中国政府一样签署了《关于持久性有机污染物的斯德哥尔摩公约》，那具体有些什么效果？</p><p><strong>林弈均：</strong>是的，台湾政府就是跟着公约走，台湾政府确实跟进得很快，但是，公约虽然具有强制性，但是，它必须符合一百多个国家的利益，所以，他的节奏是十分缓慢的，倘若台湾仅仅跟着公约走，那么，我们环保组织认为是远远不够的，尤其是我们看到欧美国家都在出台更加严厉的措施。</p><p><strong>法广：</strong>那台湾政府是否也有这方面的计划，或者作为环保组织你们期待政府能够立即采取哪些措施？</p><p><strong>林弈均：</strong>我们目前正在与政府交涉，首先要求政府必须禁止所有PFAS产品，而不是一个一个地去禁止，因为PFAS总共有超过一万多个产品，被用于商业用途的超过四千种，倘若一个个地禁止的话，那么，台湾的整个空气，土地与水早就被严重污染了。这也是为什么所有国际的环保组织都要求全面禁止PFAS的原因所在。另外，我们的第二个诉求就是禁止使用所有非必要的PFAS产品，我们最近同一个国际组织共同做了一个食品包装物上的PFAS检测，检测的结果八个样本中有七个都有PFAS，这些PFAS很可能通过食物进入人体，而这些PFAS的使用其实并没有必要，不使用PFAS至多不过是麻烦一些，而且，有些物品的替代物早已被找到。所以我们要求政府必须立即禁止在食品包装中使用PFAS。所以，以上就是在短期内我们对政府提出的两个诉求。</p><p>非常感谢看守台湾组织的研究员林弈均先生接受法广的专访！</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div>
