--- a/articles/rfi/999955.md
+++ b/articles/rfi/999955.md
@@ -1,5 +1,5 @@
-<!--1713392102000-->
-[习近平救经济 为何只执着“新质生产力”？无畏贸易战吗？](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B9%A0%E8%BF%91%E5%B9%B3%E6%95%91%E7%BB%8F%E6%B5%8E-%E4%B8%BA%E4%BD%95%E5%8F%AA%E6%89%A7%E7%9D%80-%E6%96%B0%E8%B4%A8%E7%94%9F%E4%BA%A7%E5%8A%9B-%E6%97%A0%E7%95%8F%E8%B4%B8%E6%98%93%E6%88%98%E5%90%97)
+<!--1713431701000-->
+[德中签协共享汽车数据](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE)
 ------
 
-<div>17/04/2024 - 16:43</div><img src="https://s.rfi.fr/media/display/318b3cb8-f144-11ee-a81b-005056a90284/w:1280/p:16x9/2024-03-29T084103Z_871059647_RC2JJ6AYDZ6L_RTRMADP_3_CHINA-ECONOMY-OUTLOOK.JPG"><p><strong>中国为什么避开刺激消费的路不走，坚持“新质生产力”？香港科技大学公共政策研究所高级讲师 Donald Low 感到不以为然！他4月17日在《日经亚洲》发表文章直指，北京在经济规划上永远执着于生产，根本就对消费的价值视而不见。与此同时，中国“产能过剩”，也意味着与美欧全面贸易战的风险越来越高！        </strong></p><div><p>中国当下最红的经济流行语，非习近平提出的新方针：“新质生产力”及“高质量增长”莫属。这个“新质生产力”究竟是什么意思？据中共党媒英文报纸《中国日报》介绍，“新质生产力”是以科技创新推动产业创新。</p><p>另一方面，据英媒《经济学人》4月初对此分析说，中国所谓的“新质生产力”经济策略避开了透过大规模消费来刺激经济的传统途径，而希望藉由国家力量加速先进制造业的发展，从而创造高生产力的就业机会，实现中国的自给自足，同时确保其免受美国的侵略。因此，中国将跨越钢铁制造和摩天大楼建造的阶段，进入大规模生产电动车、电池、生物制造和无人机的时代。</p><p>由此看出，中国领导人在经济决策上，就是不相信经济学家一直强调中国需要转向以消费为主的成长模式，反执着于发展“新质生产力”将促进中国未来工业和核心产业的发展，进而提升中国在全球产业链中的地位。</p><p>北京坚持“新质生产力”？香港科技大学公共政策研究所高级讲师 Donald Low 感到不以为然，他于4月17日在《日经亚洲》（Nikkei Asia）论坛版以英文评析称，北京的的“社会工程师”永远执着于生产，这些规划者根本看不到消费的价值！</p><p>文章写道，随着中国现有增长模式的失效，北京如今的主要经济流行语是“新生产力”和“高质量增长”。</p><p>特别是对投资的过分强调已经变得越来越没有成效，特别是在房地产和基础设施领域。这是中国债务与国内生产总值（GDP）之比（不包括金融部门借贷）上升到近300%的关键原因。</p><p>中国经济现在似乎陷入了长期的去杠杆化，这正在产生通货紧缩效应。在2021年之前，房地产及相关行业贡献了四分之一的年度经济产出，因此中国长达数十年的房地产繁荣的结束至少意味着浪费的、债务驱动的建筑项目的流动正在消退。</p><p>中国投资率的下降应该不是一件坏事。这对北京来说是一个机会，通过降低该国超高的储蓄率和增加消费来重新平衡经济。</p><p>多年来，经济学家一直强调中国需要转向消费主导型增长模式。中国家庭消费占GDP的比重不到40%，而大多数国家为50%至60%。</p><p>由于中国劳动力萎缩和现有产能过剩导致投资下降，政府政策应该使消费发挥更大的作用，或者至少不会阻碍消费。</p><p>但北京似乎决心阻止这种再平衡，并特别反对向家庭提供现金转移支付以刺激消费的想法。中国国家主席习近平于2021年在中国共产党的一份杂志上警告说，不要“落入通过'福利主义'培养懒惰的陷阱”，这听起来与西方右翼政客没有什么不同。</p><p>同时，也没有多少意愿通过提高养老金、健康保险或教育的措施，将资源从生产者重新分配给消费者，使家庭能够减少预防性储蓄。长期讨论的户籍制度改革，允许农村居民永久定居在城市，将大大促进消费，但似乎停滞不前。</p><p>中国政策制定者为促进工业生产而召唤的能量使他们对消费的偏见看起来更加明显。</p><p><strong>但是，对生产的迷恋到底是什么？</strong></p><p>文章接着写道，他们可能是马克思主义理论家，他们认为利用新的生产力是国家的作用。</p><p>但马克思主义者也知道，新技术加剧了不平等，需要收入和财富的再分配，而只有国家才能进行。将更多的投资引导到新的生产力上，而不采取类似的基础广泛的努力，将资源从资本所有者重新分配给工人和消费者，这很难说是马克思主义的。</p><p>一个更合理的解释是：近年来，中国的政策制定变得不那么务实和市场化了。北京的规划者不再将市场经济视为一个相互联系、复杂和适应性的系统，而是越来越多地将其视为一个可以精确设计和指导以实现乌托邦目标的机械系统。</p><p>社会工程师发现很难想象消费可以产生价值，因为他们相信生产是创造价值的东西。</p><p>偏向生产也符合中国长期以来的出口导向型工业化战略。但它忽略了一个事实，即如果国内外消费者没有足够的需求，供应增加只会导致产能过剩和价格下跌。这已经发生在中国优先考虑的一些新兴行业，例如电动汽车和太阳能电池板。</p><p>文章指出，中国的社会工程师规划师也受到他们负责创造的经济的自上而下的愿景的驱动。这使得他们对市场作为一种分配资源、选择有效方法和区分赢家和输家的机制持怀疑态度。</p><p>中国一贯实行工业定位。当中国不发达并试图赶上日本和韩国等更发达的经济体时，这是有道理的。</p><p>但今天，中国经济要复杂得多，也更接近技术前沿。虽然中国仍然是一个中等收入国家，但其制造业的生产率更接近韩国和台湾等发达经济体。反过来，更发达的经济意味着官僚们挑选赢家的能力要小得多。</p><p>如果社会工程学方法强调试错和从错误中吸取教训，那么产业政策中出错的风险可能不会那么糟糕。但社会工程学也倾向于回避证据并抵制实验。这损害了社会工程师从错误中吸取教训和策划中途纠正的能力。</p><p>换句话说，依作者之见，中国一些官僚倾向采取由上而下的方式管理经济，并对市场机制持怀疑态度，认为单凭市场经济无法有效地分配资源，也难以辨别出有效的方案，以及无法区分成功和失败的企业。</p><p>作者继续论证说，意识形态化的乌托邦政策如何导致过度扩张的最明显例子也许是中国顽固地坚持其清零政策。尽管到 2021 年年中很明显，新冠病毒无法被消灭，外部世界也开始适应与病毒共存，但北京仍坚持采取越来越严厉的镇压措施。</p><p>其结果不仅是数十亿美元的浪费性支出，而且对经济造成了更严重的创伤，自 2022 年底最终结束清零以来，中国经济复苏乏力就证明了这一点。</p><p>清零反映了一种乌托邦式的愿景，而忽略了所涉及的成本。官方媒体将中国所谓的安全乌托邦与西方正在展开的反乌托邦进行了对比，即医院不堪重负，数百万人死亡。</p><p>这被认为是中国优越治理的无可辩驳的证据。但是，当一项政策被提升到教条的水平，并以高度道德化的术语来制定时，社会工程师就很难适应新的信息。</p><p>文章末段表示，当清零政策最终被证明是站不住脚的，北京的社会工程师们被迫匆忙而突然地放弃了这项政策，导致了媒体在过去两年中一直在谴责西方的反乌托邦。</p><p>清零政策的失败应该成为当今中国产业政策制定者的一个有益教训，让他们认识到，当政策由意识形态和乌托邦思维驱动时，过度扩张和适应不良的危险。（<a href="https://asia.nikkei.com/Opinion/Beijing-s-social-engineers-will-always-be-obsessed-with-production" target="_blank">Beijing's social engineers will always be obsessed with production - Nikkei Asia</a>）</p><p>作者这篇文章令人反思！去年2月，武汉等地爆发“白发运动”，退休的年长者上街，抗议医疗保障福利受到削减。中国国家医疗保险也因保费上涨而流失超过千万名保户。另据一位经济专家、恒生银行中国首席经济学家王丹表示：“由于缺乏由高覆盖率医保引领的社会安全网，中国人被迫将收入的相当部分储蓄下来，以应对严重疾病等不时之需。这就不利政府提振消费的政策，而消费被视为中国从后疫情经济下行中恢复的关键。”</p><p>总而言之，北京当局对于建立更完善的退休金制度、医疗保险制度和扩展更普及的公共服务，以建立社会安全网，将资源重新分配给消费者，减少家庭的预防性储蓄，并不感兴趣。更遑民心渴望的户籍制度改革，允许农村居民在城市永久定居，以刺激消费了！</p><p><strong>中国“产能过剩” 可能与美欧开打全面贸易战</strong></p><p>也难怪，美国财长耶伦4月4日抵达中国南方经济重镇广州，对中国进行她任内的第二次访问时，带给中国一个强硬的信息：中国产能过剩，尤其在清洁能源产品上，而世界无法承受。</p><p>值得一提当耶伦在广州之际，路透社当时援引一位美国前财政部及贸易代表办公室官员的分析说，问题的本质是其他国家是否想进口中国价格扭曲的产品，而与中国贸易重新紧张的局面已经形成。</p><p>事实上，耶伦在前往中国途中在阿拉斯加州安克雷奇停留时，已对记者们说，“我们需要一个公平竞争的环境。我们对中国大规模投资一些产业造成产能过剩感到关切。”</p><p>如今，美国贸易代表戴琪又宣布，在对五个全国性工会向美国贸易代表办公室（USTR）提交的请愿书进行审查后，该部门“正在发起对中华人民共和国在中国和全球范围内针对海运、物流和造船行业的支配性行为、政策和做法展开调查”。</p><p>不仅仅是美国！据路透社今天17日引述欧盟商会主席警告称，中国和欧盟的贸易紧张局势可能引发全面贸易战。</p><p>中国欧盟商会会长延斯·埃斯凯伦德表示，虽然对两方贸易的一些担忧是合理的，但如果欧洲和中国领导人不加强对话，就存在非生产性脱钩的风险。他在广州商会华南分会的一次会议上表示：“火车事故尚未发生，但如果我们继续沿着今天的行进方向，我们可以预见，火车事故将会发生。”</p><p>据中国欧盟商会会长表示，“我们需要我们的领导人坐下来探讨如何避免这成为一场全面的贸易战。我认为这已经变得有点紧迫了。”</p><p>周二16日，德国总理朔尔茨结束了对中国为期三天的访问，并与中国国家主席习近平进行了会谈，朔尔茨在会谈中转达了欧洲对北京经贸政策的担忧，并推动改善市场准入。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWe5.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B9%25A0%25E8%25BF%2591%25E5%25B9%25B3%25E6%2595%2591%25E7%25BB%258F%25E6%25B5%258E-%25E4%25B8%25BA%25E4%25BD%2595%25E5%258F%25AA%25E6%2589%25A7%25E7%259D%2580-%25E6%2596%25B0%25E8%25B4%25A8%25E7%2594%259F%25E4%25BA%25A7%25E5%258A%259B-%25E6%2597%25A0%25E7%2595%258F%25E8%25B4%25B8%25E6%2598%2593%25E6%2588%2598%25E5%2590%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B9%A0%E8%BF%91%E5%B9%B3%E6%95%91%E7%BB%8F%E6%B5%8E%20%E4%B8%BA%E4%BD%95%E5%8F%AA%E6%89%A7%E7%9D%80%E2%80%9C%E6%96%B0%E8%B4%A8%E7%94%9F%E4%BA%A7%E5%8A%9B%E2%80%9D%EF%BC%9F%E6%97%A0%E7%95%8F%E8%B4%B8%E6%98%93%E6%88%98%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWe5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B9%A0%E8%BF%91%E5%B9%B3%E6%95%91%E7%BB%8F%E6%B5%8E%20%E4%B8%BA%E4%BD%95%E5%8F%AA%E6%89%A7%E7%9D%80%E2%80%9C%E6%96%B0%E8%B4%A8%E7%94%9F%E4%BA%A7%E5%8A%9B%E2%80%9D%EF%BC%9F%E6%97%A0%E7%95%8F%E8%B4%B8%E6%98%93%E6%88%98%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWe5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWe5.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B9%A0%E8%BF%91%E5%B9%B3%E6%95%91%E7%BB%8F%E6%B5%8E%20%E4%B8%BA%E4%BD%95%E5%8F%AA%E6%89%A7%E7%9D%80%E2%80%9C%E6%96%B0%E8%B4%A8%E7%94%9F%E4%BA%A7%E5%8A%9B%E2%80%9D%EF%BC%9F%E6%97%A0%E7%95%8F%E8%B4%B8%E6%98%93%E6%88%98%E5%90%97%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 10:43</div><img src="https://s.rfi.fr/media/display/87997fee-fcb5-11ee-be18-005056bfb2b6/w:1280/p:16x9/AP24107536582728.jpg"><p><strong>德国和中国签署了一份在自动驾驶和互联驾驶方面进行合作的联合声明，德国希望该声明将使汽车制造商能够将数据从中国传输到德国。这项合作被认为是德国总理朔尔兹访华的另一个成果，但数据共享这对于在华外国企业来说是一个有争议的话题。        </strong></p><div><p>据路透社报道称，德国与中国两国将共同制定共享标准和规则，以管理企业开发自动驾驶时产生的数据，德国汽车协会 VDA 表示此举将节省开发和生产资源。</p><p>该声明发布之际，欧盟和美国越来越担心中国技术进入欧美市场并在当地收集数据可能存在的安全风险，华盛顿于二月份对中国汽车进口可能存在的国家安全风险展开调查。</p><p>然而，包括大众汽车中国区总裁在内的欧洲商界领袖对中国对从中国向欧洲传输数据的限制表示失望，这些限制比欧洲对从欧洲向中国传输数据的规定要严格得多。</p><p>中国加强了对国内数据管理的监管，大多数行业在数据转移到国外之前必须申请许可。</p><p>去年，中国当局收紧了汽车行业的数据规则，并提议禁止中国的智能汽车直接将数据传输到国外，迫使它们转而使用国内的云服务。</p><p>然而，中国监管机构此后表示立场会有所软化，因为企业抱怨法律缺乏明确性，以及这些法律可能会给他们的业务带来多么繁重和破坏性的影响。</p><p>根据德国声明称，该合作将为进一步讨论该主题提供空间，强调尚未达成共识，并主张“德国和欧盟企业在这一领域做出切实改进”。</p><p>自动驾驶汽车通过激光雷达和传感器收集有关乘客和驾驶员行为以及汽车周围环境的大量数据。汽车还通过与手机和其他设备的链接收集越来越多的驾驶数据。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWl6.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E5%25BE%25B7%25E4%25B8%25AD%25E7%25AD%25BE%25E5%258D%258F%25E5%2585%25B1%25E4%25BA%25AB%25E6%25B1%25BD%25E8%25BD%25A6%25E6%2595%25B0%25E6%258D%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE%20-%20https%3A%2F%2Frfi.my%2FAWl6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE%20-%20https%3A%2F%2Frfi.my%2FAWl6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWl6.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
