--- a/articles/rfi/999964.md
+++ b/articles/rfi/999964.md
@@ -1,5 +1,5 @@
-<!--1713386701000-->
-[戴琦在美国参议院听证会谈中美间不公平竞争](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89)
+<!--1713390302000-->
+[英国奥委会主席“担忧”巴黎奥运开幕式安全](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240417-%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD-%E6%8B%85%E5%BF%A7-%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8)
 ------
 
-<div>17/04/2024 - 21:31</div><img src="https://s.rfi.fr/media/display/423cf520-cd54-11ed-9ce3-005056a90284/w:1280/p:16x9/AP23006715775170.jpg"><p><strong>在美国参议院财政委员会关于总统 2024 年贸易政策议程的听证会上，美国贸易代表戴琦发表长篇讲话，涉及众多议题，包括：如何通过贸易赋予工人权力？如何执行贸易协定以创造公平竞争环境等问题。就美国与中国的经贸关系，戴琦认为：公平经济行为的核心是为每个人提供公平的机会。        </strong></p><div><p>戴琦指出<strong>：</strong>当像中国这样的国家继续利用非市场政策和做法来主导行业时，公平竞争是不可能的。这种主导地位使中国能够胁迫其他经济体。</p><p> </p><p>中国的不公平政策和做法摧毁了我国许多工作社区和行业，包括你们各州的许多工作社区和行业。钢铁、铝、太阳能电池板、电池、电动汽车和关键矿物——仅举几例。</p><p> </p><p>中国还利用不公平的政策和做法将某些商品的生产集中在中国，这损害了供应链的弹性，并损害了消费者的利益，从长远来看，消费者被剥夺了公平竞争带来的创新和选择。</p><p> </p><p>正如总统在国情咨文中所说，本届政府将继续抵制中国不公平、非市场的政策和做法。我们正在与志同道合的伙伴和盟友一起这样做，正如你在去年六月我们与澳大利亚、加拿大、日本、新西兰和英国发表的联合声明中看到的那样。</p><p> </p><p>我们看到中国在多个领域造成了依赖和脆弱性，损害了美国工人和企业，并给我们的供应链带来了真正的风险。</p><p> </p><p>这就是为什么我们正在认真研究我们现有的工具如何解决这个问题，包括通过我们对中国 301 关税的四年审查。</p><p> </p><p>这也是为什么在仔细审查了我从五个全国性工会收到的301条款请愿书后，我对中华人民共和国长期以来主导海事、物流和造船业的行为发起了全面彻底的调查。工会的请愿书引发了人们对美国工人、造船业和美国恢复力受到损害的严重担忧。</p><p> </p><p>我们与中国的经济关系很复杂，正如总统所说，我们希望与中国竞争，而不是冲突。 </p><p> </p><p>但竞争必须公平，美国贸易代表办公室和拜登-哈里斯政府每天都在努力将工薪家庭放在第一位，重建美国制造业，并加强我们的供应链。</p><p> </p><p>我们正在利用贸易为每个人提供公平的机会。这意味着创造激励措施不仅仅是降低成本；提高劳工和环境标准；并追求韧性。</p><p> </p><p>戴琦披露：美国贸易代表办公室今年将继续致力于开发创新的贸易工具和战略，将贸易和其他经济政策措施联系起来，以推进这些目标。我要感谢在华盛顿特区和世界各地服务的美国贸易代表办公室团队，感谢他们为全美国服务的坚定奉献和决心。</p><p> </p><p>我认为我们都同意我们的经济体系，包括贸易，应该加强中产阶级的力量。我期待着通过与您和您的员工定期通报情况来继续我们的伙伴关系，就像我们过去三年所做的那样。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWga.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E6%2588%25B4%25E7%2590%25A6%25E5%259C%25A8%25E7%25BE%258E%25E5%259B%25BD%25E5%258F%2582%25E8%25AE%25AE%25E9%2599%25A2%25E5%2590%25AC%25E8%25AF%2581%25E4%25BC%259A%25E8%25B0%2588%25E4%25B8%25AD%25E7%25BE%258E%25E9%2597%25B4%25E4%25B8%258D%25E5%2585%25AC%25E5%25B9%25B3%25E7%25AB%259E%25E4%25BA%2589&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%20-%20https%3A%2F%2Frfi.my%2FAWga.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%20-%20https%3A%2F%2Frfi.my%2FAWga.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWga.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 22:47</div><img src="https://s.rfi.fr/media/display/b3a284be-fcfb-11ee-94c8-005056a97e36/w:1280/p:16x9/BO5U4OISMZE5PA5JDDAO2I2WBY.png"><p><strong></strong></p><div><p>以往的开幕式都是在封闭的体育馆举行。对于这次特殊的开幕式，人们特别担心安全问题，因为届时将有船只载着运动员沿塞纳河进行长达6公里的游行，堤岸上会有众多的民众观看。</p><p>英国奥委会首席执行官安迪·安森表示：  “如果我们不考虑这一点，那就太天真了。我们的首要任务是确保所有运动员、广大随行人员和观众的安全”。</p><p>巴黎在迎来奥运倒计时100天的重要时刻，一个重量级人物如此表态，令人担忧。</p><p>4月15日，法国总统马克龙在大皇宫内接受了法国媒体RMC与BFM TV的联合采访。在谈到备受关注的这场在塞纳河上举行的奥运开幕式时，马克龙再次重申了对成功举办这场开幕式的信心，但同时也表示，鉴于可能存在的安全风险，他出人意料地提出来两套备选方案。</p><p>“我们也在同时研究其他计划，如果届时在塞纳河上举办开幕式面临过高的安全风险，”马克龙说。“我们可能会限制人数将开幕式放在特罗卡德罗广场举行，甚至是改在法兰西体育场举行。”</p><p>将开幕式从传统的体育场移到开放的城市空间，原本是巴黎奥组委一次极具想象力的设计。按照组委会目前的方案，届时将有约10500名运动员搭乘船只，沿着塞纳河由东向西航行约6公里至埃菲尔铁塔对岸的特罗卡德罗广场，参加在那里举行的庆祝仪式。而河岸两边，将有约30万名观众能现场观看这一盛会。</p><p>法国体育部长欧迪亚-卡斯特拉（Amelie Oudea-Castera）17日表示要保持乐观。她说，“奥运会将为国家带来的好处远远超过其所付出的代价”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWh4.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240417-%25E8%258B%25B1%25E5%259B%25BD%25E5%25A5%25A5%25E5%25A7%2594%25E4%25BC%259A%25E4%25B8%25BB%25E5%25B8%25AD-%25E6%258B%2585%25E5%25BF%25A7-%25E5%25B7%25B4%25E9%25BB%258E%25E5%25A5%25A5%25E8%25BF%2590%25E5%25BC%2580%25E5%25B9%2595%25E5%25BC%258F%25E5%25AE%2589%25E5%2585%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E2%80%9C%E6%8B%85%E5%BF%A7%E2%80%9D%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8%20-%20https%3A%2F%2Frfi.my%2FAWh4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E2%80%9C%E6%8B%85%E5%BF%A7%E2%80%9D%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8%20-%20https%3A%2F%2Frfi.my%2FAWh4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWh4.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E2%80%9C%E6%8B%85%E5%BF%A7%E2%80%9D%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
