--- a/articles/rfi/999972.md
+++ b/articles/rfi/999972.md
@@ -1,5 +1,5 @@
-<!--1713366902000-->
-[警告称：中国和欧盟有全面贸易战危险](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E8%AD%A6%E5%91%8A%E7%A7%B0-%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9)
+<!--1713374101000-->
+[中国以规避手法支持莫斯科的武器生产](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7)
 ------
 
-<div>17/04/2024 - 15:26</div><img src="https://s.rfi.fr/media/display/e74645da-61fb-11ee-b8df-005056bf30b7/w:1280/p:16x9/AP23268223768333.jpg"><p><strong>欧洲商业游说团体负责人周三警告说，随着保护主义浪潮的高涨，中国和欧洲面临“慢动作火车事故”，有可能演变成一场全面的贸易战。而德国总理向北京转达了欧洲的担忧。        </strong></p><div><p>据路透社今天引述欧盟商会主席警告称，中国和欧盟的贸易紧张局势可能引发全面贸易战。</p><p>中国欧盟商会会长延斯·埃斯凯伦德表示，虽然对两方贸易的一些担忧是合理的，但如果欧洲和中国领导人不加强对话，就存在非生产性脱钩的风险。埃斯凯伦德在广州商会华南分会的一次会议上表示：“火车事故尚未发生，但如果我们继续沿着今天的行进方向，我们可以预见，火车事故将会发生。”</p><p>他指出，“我们需要我们的领导人坐下来探讨如何避免这成为一场全面的贸易战。我认为这已经变得有点紧迫了。”</p><p>周二，德国总理朔尔茨结束了对中国为期三天的访问，并与中国国家主席习近平进行了会谈，朔尔茨在会谈中转达了欧洲对北京投资政策的担忧，并推动改善市场准入。</p><p>欧盟已对中国制造商是否在其市场上倾销电动汽车等补贴商品展开了多项调查。</p><p>美国财长耶伦本月早些时候也访问了中国，并于周二表示，中国对清洁能源产品先进制造业的大规模投资导致了不公平的竞争环境。</p><p>埃斯凯伦德表示，最近的高层会见令人鼓舞。</p><p>据路透社说，埃斯凯伦德讲话时，成千上万的外国买家正在一年两次的广交会上寻找中国制造商进行交易，广交会是中国最大的贸易展览会，在珠江河畔举行。</p><p>埃斯凯伦德表示，鉴于中国作为世界领先制造商的地位，不可能想象没有中国的全球供应链。他称，“我们希望看到的一点改变是，人们认识到中国的制造业规模如此之大，制造业的小幅增量增长就可能对全球产生巨大影响。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcu.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E8%25AD%25A6%25E5%2591%258A%25E7%25A7%25B0-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2592%258C%25E6%25AC%25A7%25E7%259B%259F%25E6%259C%2589%25E5%2585%25A8%25E9%259D%25A2%25E8%25B4%25B8%25E6%2598%2593%25E6%2588%2598%25E5%258D%25B1%25E9%2599%25A9&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcu.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 13:54</div><img src="https://s.rfi.fr/media/display/e88ddb60-9efc-11ec-81cd-005056a97e36/w:1280/p:16x9/000_324M8XM.jpg"><p><strong>尽管美国和英国于12日的周五宣布禁止进口俄罗斯生产的铝、铜和镍，但莫斯科却绕过欧洲的制裁，转向北京寻求对其战斗乌克兰的支持。中国支持莫斯科的武器生产，这是《世界报》经济记者让-米歇尔·贝扎特的报道，他并指出，这证明了中俄两国之间的关系密切。         </strong></p><div><p>欧盟特使大卫·奥沙利文 (David O’Sullivan )是一位极其忙碌的高级公务员。 他担任对俄罗斯实施制裁监督的特使：他受布鲁塞尔控制的爱尔兰白人被指派负责核实中国是否有规避这些对俄罗斯的制裁。 这是中国自 2022 年 2 月针对俄罗斯动武乌克兰的战争开始时第一个一揽子计划生效以来，它一直在这样做，并取得了一些成功。 </p><p style="text-align:left">布鲁塞尔尽管对俄罗斯的石油和煤炭、战略零部件、公司企业、老板和政客实施了制裁，但布鲁塞尔并没有中断与俄罗斯的所有贸易。 </p><p style="text-align:left">几个月来增加了新的制裁。 继1月1日禁止钻石贸易后，3月初，第13个一揽子计划覆盖了200家实体和个人，未影响特定行业。 欧盟对于弗拉基米尔·普京的对手阿列克谢·纳瓦尔尼于 2 月 16 日在北极的一个战俘营中死亡事件一直在抗议中。 X3a </p><p style="text-align:left">但天然气、石油和铀仍然继续在交易，甚至是以间接的方式进行交换。 更不要说某些金属，这对莫斯科来说是一项利润丰厚的营业活动，尽管制裁导致贸易额从 2022 年的 230 亿欧元减少到 2023 年的 140 亿欧元。 </p><p style="text-align:left">铜伪装成废金属 美国和英国于 4 月 12 日星期五宣布禁止进口俄罗斯生产的铝、铜和镍， </p><p style="text-align:left">以及场外衍生品交易的限制。 对他们的业务至关重要，伦敦和芝加哥金属交易所将不再能接受它们。 </p><p style="text-align:left"><strong>欧盟贸易额下降：</strong> </p><p style="text-align:left">英国财政大臣杰里米·亨特保证说：“这将阻止克里姆林宫向其战争机器注入更多资金。” 根据俄罗斯海关数据，制裁正在产生影响：2023年，俄罗斯对欧洲大陆的货物出口下降了68%，全球下降了28%，这证明欧盟与那些拒绝制裁俄罗斯的国家之贸易并没有回偿这一损失。 </p><p style="text-align:left">然而，事实上，每天都会有一些规避这项制裁的办法。在欧盟财政部宣布金属禁运的同时，美国领导人透露，中国通过出售机床、电子元件以及无人机或导弹技术来支持莫斯科的武器生产。 </p><p style="text-align:left">据路透社报道，中俄两国以废金属的形式进行铜贸易。 土耳其、阿拉伯湾和中亚从西方进口的大量商品被再出口到俄罗斯，以支持其对乌克兰战争付出的努力。 欧盟需要十个奥沙利文先生才能监控所有这些暗中交易…… </p><p style="text-align:left"> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BB%25A5%25E8%25A7%2584%25E9%2581%25BF%25E6%2589%258B%25E6%25B3%2595%25E6%2594%25AF%25E6%258C%2581%25E8%258E%25AB%25E6%2596%25AF%25E7%25A7%2591%25E7%259A%2584%25E6%25AD%25A6%25E5%2599%25A8%25E7%2594%259F%25E4%25BA%25A7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAWbJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAWbJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
