--- a/articles/rfi/999975.md
+++ b/articles/rfi/999975.md
@@ -1,5 +1,5 @@
 <!--1713366902000-->
-[北京称瑞士乌克兰和平会议条件尚不成熟](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F)
+[警告称：中国和欧盟有全面贸易战危险](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E8%AD%A6%E5%91%8A%E7%A7%B0-%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9)
 ------
 
-<div>17/04/2024 - 14:16</div><img src="https://s.rfi.fr/media/display/37df5d2e-fca2-11ee-9c32-005056bf30b7/w:1280/p:16x9/2024-04-17T092616Z_1357906527_RC2987AJQIZX_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>瑞士上周宣布，希望于 6 月 15 日至 16 日举行乌克兰和平会议。但俄罗斯宣布不不出席，并称没有俄罗斯的参与，这个会议不会有意义。中国是否支持该会议引发关注。        </strong></p><div><p>据法新社说，在德国总理朔尔茨发表评论肯定北京方面似乎支持该会议。近日访问中国的德国总理朔尔茨周二在与中国国家主席习近平会晤期间表示，柏林和北京希望“就推动在瑞士举办高级别会议进行深入、积极的磋商”。</p><p>周三，当被问及北京是否会推动莫斯科参加此次会议时，中国外交部发言人林剑对德国总理的言论进行了限定。据林剑说，“据我所知，这次和平会议仍在准备中，还有很多工作要做。”</p><p>林剑中国外交部例行新闻发布会上称，习近平在会见朔尔茨时表示，中国“支持及时召开俄罗斯和乌克兰承认的、各方平等参与、公平讨论一切和平方案的国际和平会议”。</p><p>法新社指有评论认为，在目前的情况下，中方并不支持在瑞士举行这次会议，俄罗斯也不参加。</p><p>在瑞士宣布组织这次会议后，莫斯科认为在俄罗斯缺席的情况下举行乌克兰问题谈判“没有意义”。</p><p>在乌克兰危机上，中国呼吁对话，反对使用核武器，并敦促尊重“所有国家”的领土完整，这意味着乌克兰也包括在内。</p><p>但北京从未公开谴责莫斯科入侵乌克兰，并经常呼吁考虑俄罗斯对北约的安全担忧。十多年来，中国和俄罗斯的关系日益密切，因为两国在国际舞台上共同谴责西方霸权。</p><p>自乌克兰入侵以来，中俄两国加强了经济、军事和外交合作。</p><p>据中国官方新华社说，习近平周二向朔尔茨提出了防止乌克兰危机“失控”的“四项原则”。据习近平表示，“我们要以维护和平稳定为中心，不要自私地利用局势”。</p><p>中国还呼吁“不要火上浇油”。法新社说，这可以理解为中国暗批美国人和欧洲人向基辅运送武器。</p><p>中国国家主席还呼吁，“我们必须创造恢复和平所需的条件”并“减少对世界经济的影响”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbn.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E5%258C%2597%25E4%25BA%25AC%25E7%25A7%25B0%25E7%2591%259E%25E5%25A3%25AB%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E5%2592%258C%25E5%25B9%25B3%25E4%25BC%259A%25E8%25AE%25AE%25E6%259D%25A1%25E4%25BB%25B6%25E5%25B0%259A%25E4%25B8%258D%25E6%2588%2590%25E7%2586%259F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F%20-%20https%3A%2F%2Frfi.my%2FAWbn.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F%20-%20https%3A%2F%2Frfi.my%2FAWbn.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbn.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:26</div><img src="https://s.rfi.fr/media/display/e74645da-61fb-11ee-b8df-005056bf30b7/w:1280/p:16x9/AP23268223768333.jpg"><p><strong>欧洲商业游说团体负责人周三警告说，随着保护主义浪潮的高涨，中国和欧洲面临“慢动作火车事故”，有可能演变成一场全面的贸易战。而德国总理向北京转达了欧洲的担忧。        </strong></p><div><p>据路透社今天引述欧盟商会主席警告称，中国和欧盟的贸易紧张局势可能引发全面贸易战。</p><p>中国欧盟商会会长延斯·埃斯凯伦德表示，虽然对两方贸易的一些担忧是合理的，但如果欧洲和中国领导人不加强对话，就存在非生产性脱钩的风险。埃斯凯伦德在广州商会华南分会的一次会议上表示：“火车事故尚未发生，但如果我们继续沿着今天的行进方向，我们可以预见，火车事故将会发生。”</p><p>他指出，“我们需要我们的领导人坐下来探讨如何避免这成为一场全面的贸易战。我认为这已经变得有点紧迫了。”</p><p>周二，德国总理朔尔茨结束了对中国为期三天的访问，并与中国国家主席习近平进行了会谈，朔尔茨在会谈中转达了欧洲对北京投资政策的担忧，并推动改善市场准入。</p><p>欧盟已对中国制造商是否在其市场上倾销电动汽车等补贴商品展开了多项调查。</p><p>美国财长耶伦本月早些时候也访问了中国，并于周二表示，中国对清洁能源产品先进制造业的大规模投资导致了不公平的竞争环境。</p><p>埃斯凯伦德表示，最近的高层会见令人鼓舞。</p><p>据路透社说，埃斯凯伦德讲话时，成千上万的外国买家正在一年两次的广交会上寻找中国制造商进行交易，广交会是中国最大的贸易展览会，在珠江河畔举行。</p><p>埃斯凯伦德表示，鉴于中国作为世界领先制造商的地位，不可能想象没有中国的全球供应链。他称，“我们希望看到的一点改变是，人们认识到中国的制造业规模如此之大，制造业的小幅增量增长就可能对全球产生巨大影响。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcu.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E8%25AD%25A6%25E5%2591%258A%25E7%25A7%25B0-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2592%258C%25E6%25AC%25A7%25E7%259B%259F%25E6%259C%2589%25E5%2585%25A8%25E9%259D%25A2%25E8%25B4%25B8%25E6%2598%2593%25E6%2588%2598%25E5%258D%25B1%25E9%2599%25A9&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcu.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
