--- a/articles/rfi/999976.md
+++ b/articles/rfi/999976.md
@@ -1,5 +1,5 @@
 <!--1713366902000-->
-[英媒调查：俄军已被证实死亡人数突破5万人大关](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5-%E4%BF%84%E5%86%9B%E5%B7%B2%E8%AF%81%E5%AE%9E%E4%BC%A4%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3)
+[岸田文雄与尹锡悦通话介绍访美成果：继续深化日韩、日美韩合作](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C-%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9-%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C)
 ------
 
-<div>17/04/2024 - 12:04</div><img src="https://s.rfi.fr/media/display/80701928-ef48-11ee-83d5-005056a90284/w:1280/p:16x9/2024-03-28T063828Z_239250322_RC2LU6AB5QPA_RTRMADP_3_UKRAINE-CRISIS-PUTIN-F16.JPG"><p><strong>经英国广播公司（BBC）报导证实，俄罗斯军队在乌克兰的死亡人数现已突破5万人大关。在前线的第2个12个月里——莫斯科推行其所谓绞肉机战略：BBC发现俄军死亡人数比开战以来第1年高出近 25%。自2022年2月全面入侵以来，BBC俄语组、俄独立媒体机构Mediazona和志愿者一直在统计俄军的死亡人数。墓地中的新坟墓帮助调查者们找到了许多士兵的名字。BBC的团队还梳理了来自官方报告、报纸和社交媒体的公开信息。        </strong></p><div><p>根据BBC的调查结果显示，在第2年的战斗中，有超过2.73万名俄罗斯士兵丧生，这反映出在取得领土的同时也付出了巨大的人员代价。俄罗斯官方拒绝对此发表评论。</p><p>“绞肉机”一词被用来形容莫斯科派遣俄军士兵一波波无情地向前推进，试图拖垮乌军并将他们的位置暴露在俄军大炮面前的方式。俄军总死亡人数超过5万人，比莫斯科官方唯一公开承认的2022年9月的死亡人数高出8倍。俄罗斯人的实际死亡人数可能要高得多。</p><p>BBC报道的分析不包括俄罗斯占领的乌东顿涅茨克和卢甘斯克民兵的死亡人数。如果加上这些民兵，俄方的死亡人数会更高。与此同时，乌方很少对其战场死亡人数发表评论。今年2月，乌克兰总统泽连斯基（Volodymyr Zelenskyy）称，已有3.1万名乌克兰士兵阵亡，但根据美国情报估计，损失会更大。</p><p>BBC和俄独立媒体机构Mediazona最新公布的死亡士兵名单显示了俄军改变前线战术所付出的惨痛代价。与这两家媒体机构合作的志愿者们一直在清点自战争开始以来，俄罗斯境内70个墓地中的新军人坟墓。</p><p>航拍图片显示，墓地已大幅扩建。例如，位于莫斯科东南部的博戈罗茨科耶（Bogorodskoye）墓地的图片显示，墓地出现了一片全新的区域。实地拍摄的图片和视频显示，这些新坟墓大多属于在乌克兰阵亡的俄军士兵和军官。</p><p>据BBC估计，在俄方阵亡的战士中，至少有五分之二是在入侵前与该国军队毫无关系的人。伦敦智库、英国皇家联合军种国防研究所的副研究员克兰尼-埃文斯（Samuel Cranny-Evans）解释说，在2022年入侵之初，俄罗斯可以利用其专业部队开展复杂的军事行动。</p><p>这位防务分析家说，但现在这些经验丰富的士兵很可能已经死伤殆尽，取而代之的是没有受过什么训练或没有什么军事经验的人——比如志愿者、平民和囚犯。克兰尼-埃文斯指出，这些人做不了职业军人能做的事，“这意味着他们必须做一些战术上简单得多的事情：通常似乎是在炮火支援下对乌克兰阵地进行前沿突击”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZZ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E8%258B%25B1%25E5%25AA%2592%25E8%25B0%2583%25E6%259F%25A5-%25E4%25BF%2584%25E5%2586%259B%25E5%25B7%25B2%25E8%25AF%2581%25E5%25AE%259E%25E4%25BC%25A4%25E4%25BA%25A1%25E4%25BA%25BA%25E6%2595%25B0%25E7%25AA%2581%25E7%25A0%25B45%25E4%25B8%2587%25E4%25BA%25BA%25E5%25A4%25A7%25E5%2585%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZZ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:25</div><img src="https://s.rfi.fr/media/display/597e26d0-e67e-11ed-86bc-005056a90284/w:1280/p:16x9/AP23114100492149.jpg"><p><strong>据韩国总统办公室介绍，韩国总统尹锡悦周三应约同日本首相岸田文雄通电话。根据岸田首相的建议，通话于当晚7点开始，持续了15分钟。        </strong></p><div><p>尹锡悦表示，在当前韩半岛、印太地区等国际局势不稳定性上升的背景下，韩日两国应保持紧密合作，并加强韩美日三边合作，为地区和平与共同繁荣作出积极贡献。</p><p>岸田文雄介绍了此次访美成果和日美关系取得的进展，称日方将基于坚实的韩美日合作基础应对国际热点问题，并同韩方伙伴继续深化双边合作。韩国总统室称，两国领导人还就对朝政策交换意见，并同意在相关问题上建设更加紧密的韩日、韩美日合作伙伴关系。</p><p>此外，双方一致同意今年继续加强领导人和外交部门之间的交流沟通，延续两国去年通过7次首脑会谈构建的信赖关系和上升势头。通话结束后，岸田在东京对记者说：“我们同意继续深化日本和韩国之间以及日本、韩国和美国之间的关系”。他介绍说：“我还向尹总统转达了日美峰会上就朝鲜局势交换的意见”。</p><p>此次通话是执政党在韩国国会选举中惨败以来，日韩领导人的首次通话。共同社评估称，岸田的意图是明确表示要与尹锡悦保持合作关系。此次通话也正值韩美日三方对平壤可能再次发射间谍卫星提高警惕之际，据美国智库估计，平壤最迟可能在4月底发射间谍卫星。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcr.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E5%25B2%25B8%25E7%2594%25B0%25E6%2596%2587%25E9%259B%2584%25E4%25B8%258E%25E5%25B0%25B9%25E9%2594%25A1%25E6%2582%25A6%25E9%2580%259A%25E8%25AF%259D%25E4%25BB%258B%25E7%25BB%258D%25E8%25AE%25BF%25E7%25BE%258E%25E6%2588%2590%25E6%259E%259C-%25E7%25BB%25A7%25E7%25BB%25AD%25E6%25B7%25B1%25E5%258C%2596%25E6%2597%25A5%25E9%259F%25A9-%25E6%2597%25A5%25E7%25BE%258E%25E9%259F%25A9%25E5%2590%2588%25E4%25BD%259C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C%20-%20https%3A%2F%2Frfi.my%2FAWcr.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C%20-%20https%3A%2F%2Frfi.my%2FAWcr.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcr.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
