--- a/articles/rfi/999983.md
+++ b/articles/rfi/999983.md
@@ -1,5 +1,5 @@
-<!--1713356105000-->
-[中美防长刚通电话 中国军机台湾海峡跟踪美国海军巡逻机](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D-%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA)
+<!--1713363302000-->
+[法国大办诺曼底登陆80周年庆祝活动 但不邀请普京](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8-%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC)
 ------
 
-<div>17/04/2024 - 11:05</div><img src="https://s.rfi.fr/media/display/9dceba52-b9fe-11ea-a7ad-005056bf87d6/w:1280/p:16x9/roblin_poseidon.jpg"><p><strong>中国军方周三报告，派出战斗机对飞越敏感台湾海峡的美国海军巡逻机进行监视和警告。中国军方谴责美国此次在台湾海峡的飞行是“公开炒作”。美国军方称，“美国根据国际法在台湾海峡开展行动，维护了所有国家的航行权利和自由。”路透社说，此事件发生在中美国防部长互通电话几小时后。        </strong></p><div><p>中国派出战斗机在台湾海峡跟踪美国海军飞机。中国军方报告派出战斗机对飞越敏感台湾海峡的美国海军巡逻机进行监视和警告。</p><p>路透社的报道称，中国声称对民主治理的台湾拥有主权，并表示对该海峡拥有管辖权。台湾和美国对此存在争议，称台湾海峡是国际水道。</p><p>据美国海军第七舰队报告，P-8A海神海上巡逻侦察机也用于反潜任务，在国际空域飞越了台湾海峡。</p><p>美国在一份声明中表示：“美国根据国际法在台湾海峡开展行动，维护所有国家的航行权利和自由。” 并说，“这架飞机飞越台湾海峡表明了美国对自由开放的印太地区的承诺。”</p><p>中国军方称此次飞行是“公开炒作”，并公告说已派出战机对美机进行监视和警告，并且“依法依规予以处理”。</p><p>解放军东部战区在声明中表示，战区部队始终保持高度戒备，坚决捍卫国家主权安全和地区和平稳定。</p><p>根据台湾国防部消息，美军飞机经海峡向南飞行，台军已监测情况，但未发现任何异常。</p><p>上次美国海军宣布飞越台湾海峡是在去年12月，中国军方表示也派出了战斗机对飞机进行监视和警告。</p><p>最新的飞越任务是在美国国防部长奥斯汀与中国国防部长董军通话后不久进行的，两国防长通话是两国寻求恢复军事关系一年多来的首次接触。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYa.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E7%25BE%258E%25E9%2598%25B2%25E9%2595%25BF%25E5%2588%259A%25E9%2580%259A%25E7%2594%25B5%25E8%25AF%259D-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2586%259B%25E6%259C%25BA%25E5%258F%25B0%25E6%25B9%25BE%25E6%25B5%25B7%25E5%25B3%25A1%25E8%25B7%259F%25E8%25B8%25AA%25E7%25BE%258E%25E5%259B%25BD%25E6%25B5%25B7%25E5%2586%259B%25E5%25B7%25A1%25E9%2580%25BB%25E6%259C%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAWYa.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAWYa.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYa.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 13:45</div><img src="https://s.rfi.fr/media/display/b95f53c6-e57b-11ec-9266-005056bf30b7/w:1280/p:16x9/AFP_000_WAS2004050505268_DDay_Omaha_Beach_1944.jpg"><p><strong>俄罗斯将受邀参加6月初举行的盟军在法国诺曼底登陆80周年庆祝活动，但由于俄罗斯对乌克兰侵略战争，俄罗斯总统普京没有被邀参加仪式。        </strong></p><div><p>据这次纪念活动的组织者报告，“鉴于目前俄罗斯在乌克兰的侵略战争，普京将不会被邀请参加诺曼底登陆的纪念活动。”</p><p>该组织者称，“然而，俄罗斯将被邀请出席，以便苏联人民的承诺和牺牲，以及他们对 1945 年胜利的贡献应当得到尊重。”</p><p>诺曼底登陆纪念仪式组织者没有详细说明俄罗斯可以以何种级别的代表参加在法国西北部诺曼底举行的纪念活动。</p><p>2014 年 6 月，尽管克里米亚被俄罗斯兼并，因俄罗斯总统普京仍受邀参加当年的 70 周年庆祝活动。</p><p>随后，俄罗斯总统普京和乌克兰总统波罗申科在乌克兰东部发生亲俄叛乱军事冲突期间首次对话，西方指责莫斯科煽动甚至直接策划了这场叛乱。促进这次对话有法国总统奥朗德和德国总理默克尔的斡旋，随后上述这四个国家建立“诺曼底”形式进行谈判，以寻求乌克兰危机的解决方案。危机持续，直至2022年2月俄罗斯入侵乌克兰至今。</p><p>但普京曾经没有被邀请参加2019年“诺曼底登陆”（D-Day）75周年纪念活动，当时乌克兰东部局势已经陷入困境。</p><p>普京称不被邀请“绝对不是一个问题”。 莫斯科称不要夸大盟军登陆的重要性，坚持二战中有 2700 万苏联人死亡。</p><p>组织纪念盟军登陆活动的“解放使命”组织解释：“从历史上看，法国一直邀请当年有士兵在诺曼底登陆的国家参加这一仪式。俄罗斯联邦也被邀请过参加仪式。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbA.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E6%25B3%2595%25E5%259B%25BD%25E5%25A4%25A7%25E5%258A%259E%25E8%25AF%25BA%25E6%259B%25BC%25E5%25BA%2595%25E7%2599%25BB%25E9%2599%258680%25E5%2591%25A8%25E5%25B9%25B4%25E5%25BA%2586%25E7%25A5%259D%25E6%25B4%25BB%25E5%258A%25A8-%25E4%25BD%2586%25E4%25B8%258D%25E9%2582%2580%25E8%25AF%25B7%25E6%2599%25AE%25E4%25BA%25AC&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8%20%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC%20-%20https%3A%2F%2Frfi.my%2FAWbA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8%20%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC%20-%20https%3A%2F%2Frfi.my%2FAWbA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbA.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8%20%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
