--- a/articles/rfi/999985.md
+++ b/articles/rfi/999985.md
@@ -1,5 +1,5 @@
-<!--1713356104000-->
-[中国田协出面说要调查半程马拉松作弊指控案](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88)
+<!--1713363301000-->
+[中美防长难得对话 说了什么](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D-%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88)
 ------
 
-<div>17/04/2024 - 11:21</div><img src="https://s.rfi.fr/media/display/8014ac0e-dc57-11ee-b9f1-005056bf30b7/w:1280/p:16x9/AP23200244616280.jpg"><p><strong>刚刚过去的周日北京半程马拉松的视频显示，三名来自非洲国家的选手似乎放慢速度，以便中国选手何杰超过他们并获胜。中国田径协会誓言加强对路跑赛事的调查与监管。        </strong></p><div><p>中国选手何杰报告以 1 小时 03 分 44 秒的成绩获胜，他领先埃塞俄比亚选手德杰内·海鲁·比基拉 (Dejene Hailu Bikila) 和肯尼亚选手罗伯特·凯特 (Robert Keter) 和威利·姆南加特 (Willy Mnangat)，这3个人均获得并列第二名。</p><p>据网上分享的视频显示，三名领先的跑步者向还稍稍落后的何杰挥手，示意终点线。最终四个人一起跑完了整个比赛，总里程刚刚超过 13 英里。</p><p>肯尼亚选手姆南加特告诉英国广播公司，他们三人只是作为起跑者参加比赛，并不计成绩。然而，按照惯例，他们的参赛号码布并没有表明他们是起跑后跑跑而已。</p><p>北京市体育主管部门北京市体育局表示，正在对该事件进行调查，调查结果将在稍后公布。该机构还说，“总体来看，路跑赛事整体运行平稳，但赛事组织管理方面的问题也暴露出来，引起了广泛关注。”</p><p>据路透社说，长跑在中国越来越受欢迎，但比赛却有作弊和组织不善的历史。比如，2018年深圳半程马拉松赛中，有258名参赛者被证实作弊。 2010年，中国山东女子半程马拉松冠军因被发现由他人代跑而被剥夺了冠军头衔。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E5%259B%25BD%25E7%2594%25B0%25E5%258D%258F%25E5%2587%25BA%25E9%259D%25A2%25E8%25AF%25B4%25E8%25A6%2581%25E8%25B0%2583%25E6%259F%25A5%25E5%258D%258A%25E7%25A8%258B%25E9%25A9%25AC%25E6%258B%2589%25E6%259D%25BE%25E4%25BD%259C%25E5%25BC%258A%25E6%258C%2587%25E6%258E%25A7%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:43</div><img src="https://s.rfi.fr/media/display/acc7f874-a745-11ee-a27e-005056a97e36/w:1280/p:16x9/Dong%20Jun.JPG"><p><strong>美国和中国国防部长昨天稍晚实现一年半以来首次通话，这是两个超级大国在紧张对立局势依然严重的情况下仍希望保持对话的新迹象。但同时这次交流正值美国寻求加强与亚太地区其他国家的军事联盟以对抗中国日益增长的影响力之际。        </strong></p><div><p>据法新社今天报道称，华盛顿希望与北京保持开放的沟通渠道，以防止紧张局势升级。五角大楼报告，美国国防部长奥斯汀和中国国防部长董军通过视频会议通话。</p><p>据美国五角大楼发言人帕特·莱德在公告中说：两位官员讨论了美国和中华人民共和国之间的防务关系以及地区和全球安全问题。奥斯汀强调了两国之间继续开放军事通讯线的重要性，他并重申美国将继续在国际法允许的任何地方安全、负责任地飞行、航行和行动。”</p><p>根据中国国防部的一份新闻稿，中国国防部长董军呼吁中美两国之间应加强信任。</p><p>他强调，中美必须以和平为最宝贵、以稳定为最重要。 而军事部门对稳定双边关系发展和防止重大危机至关重要。</p><p>据法新社，董军重申中国对台湾的立场。 中国将台湾视为自己的省份之一，自 1949 年中国内战结束以来，中国尚未成功将台湾与其他领土统一。</p><p>中国官方透露的董军讲话称，“台湾问题事关中国的核心利益，中国的核心利益决不能受到损害。”</p><p>中国国防部长还呼吁美国尊重中国在南海的主权主张。</p><p>法新社称，北京声称对南海的大部分海域，岛屿和礁石拥有主权，而且最近与菲律宾的紧张局势加剧。</p><p>董军强调，“美国必须承认中国的坚定立场”并“采取具体措施维护地区和平”。</p><p>这次交流是在美国、菲律宾和日本领导人在华盛顿举行史无前例的峰会之后不到一周进行的，峰会期间美国菲律宾和日本特别谴责了北京在这一战略海域的“危险和侵略性”行为。</p><p>在明显针对北京的警告中，美国总统拜登承诺在发生被袭击时美国会保卫菲律宾。</p><p>拜登和习近平去年 11 月在加利福尼亚州会晤期间商定的两国军事安全对话最近恢复，并于 4 月初在夏威夷举行了美国和中国军事代表的工作会议。</p><p>但这位五角大楼负责人与中国国防部长的最后一次重要交流可以追溯到 2022 年 11 月，当时他在柬埔寨会见了时任国防部长魏凤和。</p><p>而时任众议院民主党领袖佩洛西 (Nancy Pelosi) 2022 年访问台湾后，北京决定中断与华盛顿的高层军事讨论。</p><p>2023 年初，中国和美国经历了一段高度紧张的时期，这与中国气球飞越美国领土有关。</p><p>尽管局势有所缓和，但无论是技术竞争还是台湾问题，紧张局势仍然很高。</p><p>在美国和中国领导人于11月就恢复军事讨论达成一致之前，美国国防部长曾警告称，如果两国军队之间缺乏沟通，可能会导致擦枪走火事故恶化。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWd8.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E7%25BE%258E%25E9%2598%25B2%25E9%2595%25BF%25E9%259A%25BE%25E5%25BE%2597%25E5%25AF%25B9%25E8%25AF%259D-%25E8%25AF%25B4%25E4%25BA%2586%25E4%25BB%2580%25E4%25B9%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88%20-%20https%3A%2F%2Frfi.my%2FAWd8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88%20-%20https%3A%2F%2Frfi.my%2FAWd8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWd8.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
