--- a/articles/rfi/999996.md
+++ b/articles/rfi/999996.md
@@ -1,5 +1,5 @@
-<!--1713305701000-->
-[所罗门群岛将举行全国选举](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240416-%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE)
+<!--1713318302000-->
+[舒尔茨访华：未来可能是人人为己，唯一的赢家将是习近平 - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240416-%E8%88%92%E5%B0%94%E8%8C%A8%E8%AE%BF%E5%8D%8E-%E6%9C%AA%E6%9D%A5%E5%8F%AF%E8%83%BD%E6%98%AF%E4%BA%BA%E4%BA%BA%E4%B8%BA%E5%B7%B1%EF%BC%8C%E5%94%AF%E4%B8%80%E7%9A%84%E8%B5%A2%E5%AE%B6%E5%8F%AF%E8%83%BD%E6%98%AF%E4%B9%A0%E8%BF%91%E5%B9%B3)
 ------
 
-<div>16/04/2024 - 22:49</div><img src="https://s.rfi.fr/media/display/72f66436-fa84-11ee-9d74-005056bf30b7/w:1280/p:16x9/2024-03-25T051154Z_17230021_RC2O02AQY5SK_RTRMADP_3_SOLOMONISLANDS-ELECTION.JPG"><p><strong></strong></p><div><p>大约 6780 名选举官员将参与其中—是 2019 年选举人数的两倍，因为选民还将选出新的省议会和霍尼亚拉市议会。为了防止发生骚乱，澳大利亚、新西兰和巴布亚新几内亚等邻国已在选举期间派出警察协助维持安全，因为此前选举之后都会出现一段时期的骚乱。</p><p>夏威夷大学太平洋岛屿研究中心副教授兼前主任塔西修斯·卡布陶拉卡称，这次选举“可能是所罗门群岛自独立以来最重要的一次”，因为该国持续存在的经济问题及其在中美之间更大竞争中所扮演的角色。</p><p>对于外国观察家来说，主要问题是所罗门群岛与中国的持续关系以及总理索加瓦雷是否会再次当选。索加瓦雷因在 2019 年将外交承认从台湾转为中国而闻名于海外。</p><p>这一有争议的决定引发了骚乱，2021 年 11 月，抗议者瞄准霍尼亚拉的唐人街，并试图冲进索加瓦雷的住所，应政府要求，在澳大利亚警察特遣队的帮助下恢复了和平。</p><p>随后在 2022 年，索加瓦雷与北京签署了一项秘密安全协议，引起了澳大利亚、新西兰和美国的恐慌，这些国家担心中国有一天可能会在那里建立海军基地，从而极大地扩大北京的军事影响力，该岛链位于澳大利亚布里斯班市以东约 2000 公里（1200 英里）处，距中国上海市东南部仅 6000 多公里（3728 英里）处。</p><p>索加瓦雷的最高职位竞争对手之一、直言不讳的国会议员、该国第一任总理的儿子小彼得·凯尼洛雷亚 (Peter Kenilorea Jr) 已承诺将与台湾建立关系。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240416-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E7%25BE%25A4%25E5%25B2%259B%25E5%25B0%2586%25E4%25B8%25BE%25E8%25A1%258C%25E5%2585%25A8%25E5%259B%25BD%25E9%2580%2589%25E4%25B8%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE%20-%20https%3A%2F%2Frfi.my%2FAWUK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE%20-%20https%3A%2F%2Frfi.my%2FAWUK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 01:10</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>法国世界报周二就德国总理舒尔茨对中国的访问发表了社论。在法国和德国关系疏远的背景下，法国世界报担心未来会出现人人为己的局面。法国世界报周二在社论中表示，德国总理在中国呼吁“公开和公平”的竞争，似乎，德国总理是忽视了北京只认力量较量的这个事实。如果欧洲人不团结起来作为一个整体来行动的话，就会面临被削弱的风险。                    </strong></p><div><p>法国世界报指出，2022年2月27日，即俄罗斯入侵乌克兰后三天，德国总理在德国联邦议会的讲台上庄严地宣布，“时代变了”(Zeitenwende)。</p><p>德国被迫承认多年来自己一直把赌注押在普京的理性上，把赌注押在依靠俄罗斯天然气的供应来维持德国工业的运转上，从而误入了歧途。</p><p>法国世界报表示，德国总理所说的“时代变了”不仅只涉及德国和俄国的关系。它还涉及到，在只知道弱肉强食的政权面前要捍卫民主和法治。</p><p>“时代变了”标志着“通过贸易来改变”（Wandel durch Handel）这一理论的终结。“通过贸易来改变”是德国的一个政治理论，根据该理论，通过与西方民主国家进行贸易，独裁政权必然会实现自由化。从这个意义上说，德国总理所说的时代变了，也事关中国。</p><p>然而，德国总理舒尔茨于4月14日星期日至4月16日星期二率领大型经济代表团访华显示了：当涉及与中国的关系时，舒尔茨这位德国社民党人对自己的定位与前总理默克尔是一致的，而不是与默克尔决裂。</p><p>法国世界报还指出，2023年3月，欧盟委员会主席冯德莱恩坚称需要“降低对中国的风险”，但尽管如此，许多德国企业家尤其是最大的德国企业家仍然认为，恰恰相反，主要的风险是没有足够地把赌押在雄心勃勃地要成为世界老大的全球第二大经济体中国的身上。目前在华经营的德国企业不少于5000家。</p><p><strong>“公开、公平”的竞争</strong></p><p>舒尔茨的环保部长贝尔博克（Annalena Baerbock）称习近平是“独裁者”，德国商界在“去风险”问题上存在分歧，而舒尔茨自己的政党社民党似乎相信中国可以影响俄罗斯在乌克兰问题上的立场。因此，舒尔茨在走钢丝。然而，舒尔茨呼吁中国进行“公开和公平”的竞争，似乎，德国总理忽视了北京是只认力量较量的这个事实。尽管中国的内需依然低迷，但习近平远没有做出丝毫的妥协，习近平是比以往任何时候都更加指望受到大量补贴的中国工业来征服新市场以确保中国经济有令人满意的增长。</p><p>身为中国共产党总书记的习近平事实上是一位保守派，他只信奉供给政策，他坚信，支持内需会让中国人懒惰，从而导致中国的衰落。舒尔茨是无法改变这种心态的。他应该更多地考虑众多欧洲国家对北京所持的保留意见，并从他自己做出的“时代变了”的总结中得出结论。</p><p>法国世界报的社论最后写道，2019年3月，习近平来到巴黎时，不仅受到马克龙的接见，还受到默克尔和时任欧盟委员会主席容克的接见。2024年春天，在中国国家主席准备对法国进行国事访问之前三周，德国总理访问中国。未来可能是人人为己，唯一的赢家可能是习近平。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
